@@ -19,25 +19,43 @@ import com.google.common.collect.ImmutableSet;
 import com.google.common.collect.Lists;
 import com.google.common.collect.Maps;
 import com.google.common.collect.Sets;
-import com.starrocks.catalog.ArrayType;
+import com.starrocks.catalog.AggregateFunction;
 import com.starrocks.catalog.Column;
 import com.starrocks.catalog.ColumnAccessPath;
 import com.starrocks.catalog.FunctionSet;
-import com.starrocks.catalog.KeysType;
+import com.starrocks.catalog.HiveTable;
+import com.starrocks.catalog.IcebergTable;
 import com.starrocks.catalog.OlapTable;
-import com.starrocks.catalog.Partition;
-import com.starrocks.catalog.Type;
+import com.starrocks.catalog.PhysicalPartition;
+import com.starrocks.catalog.Table;
 import com.starrocks.common.FeConstants;
+import com.starrocks.common.Pair;
+import com.starrocks.common.util.UnionFind;
+import com.starrocks.connector.hive.HiveStorageFormat;
 import com.starrocks.qe.SessionVariable;
 import com.starrocks.server.GlobalStateMgr;
 import com.starrocks.sql.optimizer.OptExpression;
 import com.starrocks.sql.optimizer.OptExpressionVisitor;
 import com.starrocks.sql.optimizer.base.ColumnRefSet;
+import com.starrocks.sql.optimizer.base.DistributionCol;
+import com.starrocks.sql.optimizer.base.DistributionProperty;
+import com.starrocks.sql.optimizer.base.DistributionSpec;
+import com.starrocks.sql.optimizer.base.EquivalentDescriptor;
+import com.starrocks.sql.optimizer.base.HashDistributionSpec;
+import com.starrocks.sql.optimizer.base.Ordering;
 import com.starrocks.sql.optimizer.operator.Operator;
+import com.starrocks.sql.optimizer.operator.OperatorType;
 import com.starrocks.sql.optimizer.operator.physical.PhysicalHashAggregateOperator;
+import com.starrocks.sql.optimizer.operator.physical.PhysicalHiveScanOperator;
+import com.starrocks.sql.optimizer.operator.physical.PhysicalIcebergScanOperator;
 import com.starrocks.sql.optimizer.operator.physical.PhysicalJoinOperator;
 import com.starrocks.sql.optimizer.operator.physical.PhysicalOlapScanOperator;
+import com.starrocks.sql.optimizer.operator.physical.PhysicalScanOperator;
+import com.starrocks.sql.optimizer.operator.physical.PhysicalSetOperation;
 import com.starrocks.sql.optimizer.operator.physical.PhysicalTableFunctionOperator;
+import com.starrocks.sql.optimizer.operator.physical.PhysicalTopNOperator;
+import com.starrocks.sql.optimizer.operator.physical.PhysicalUnionOperator;
+import com.starrocks.sql.optimizer.operator.physical.PhysicalWindowOperator;
 import com.starrocks.sql.optimizer.operator.scalar.BinaryPredicateOperator;
 import com.starrocks.sql.optimizer.operator.scalar.CallOperator;
 import com.starrocks.sql.optimizer.operator.scalar.CaseWhenOperator;
@@ -52,25 +70,36 @@ import com.starrocks.sql.optimizer.operator.scalar.LikePredicateOperator;
 import com.starrocks.sql.optimizer.operator.scalar.MatchExprOperator;
 import com.starrocks.sql.optimizer.operator.scalar.ScalarOperator;
 import com.starrocks.sql.optimizer.operator.scalar.ScalarOperatorVisitor;
+import com.starrocks.sql.optimizer.operator.scalar.SubfieldOperator;
+import com.starrocks.sql.optimizer.rule.tree.JsonPathRewriteRule;
 import com.starrocks.sql.optimizer.statistics.CacheDictManager;
+import com.starrocks.sql.optimizer.statistics.CacheRelaxDictManager;
 import com.starrocks.sql.optimizer.statistics.ColumnDict;
 import com.starrocks.sql.optimizer.statistics.ColumnStatistic;
 import com.starrocks.sql.optimizer.statistics.IDictManager;
+import com.starrocks.sql.optimizer.statistics.IRelaxDictManager;
 import com.starrocks.thrift.TAccessPathType;
+import com.starrocks.type.ArrayType;
+import com.starrocks.type.StructType;
+import com.starrocks.type.Type;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
+import org.jetbrains.annotations.TestOnly;
 
 import java.util.Collection;
 import java.util.Collections;
-import java.util.HashSet;
+import java.util.IdentityHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
+import java.util.function.Predicate;
 import java.util.stream.Collectors;
 
-import static com.starrocks.analysis.BinaryType.EQ_FOR_NULL;
+import static com.starrocks.sql.ast.expression.BinaryType.EQ_FOR_NULL;
+import static org.apache.iceberg.TableProperties.DEFAULT_FILE_FORMAT;
+import static org.apache.iceberg.TableProperties.DEFAULT_FILE_FORMAT_DEFAULT;
 
 /*
  * For compute all string columns that can benefit from low-cardinality optimization by bottom-up
@@ -83,7 +112,21 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
     private static final Logger LOG = LogManager.getLogger(DecodeCollector.class);
 
     public static final Set<String> LOW_CARD_AGGREGATE_FUNCTIONS = Sets.newHashSet(FunctionSet.COUNT,
-            FunctionSet.MULTI_DISTINCT_COUNT, FunctionSet.MAX, FunctionSet.MIN, FunctionSet.APPROX_COUNT_DISTINCT);
+            FunctionSet.MULTI_DISTINCT_COUNT, FunctionSet.MAX, FunctionSet.MIN, FunctionSet.APPROX_COUNT_DISTINCT,
+            FunctionSet.ANY_VALUE, FunctionSet.ARRAY_AGG);
+
+    //TODO(by satanson): it seems that we can support more windows functions in future, at present, we only support
+    // LAG/LEAD/FIRST_VALUE/LAST_VALUE and the aggregations functions which can adopt low cardinality optimization
+    // and used as window function.
+    public static final Set<String> LOW_CARD_WINDOW_FUNCTIONS = Sets.newHashSet(FunctionSet.LAG, FunctionSet.LEAD,
+            FunctionSet.FIRST_VALUE, FunctionSet.LAST_VALUE);
+
+    static {
+        LOW_CARD_WINDOW_FUNCTIONS.addAll(LOW_CARD_AGGREGATE_FUNCTIONS);
+    }
+
+    public static final Set<String> LOW_CARD_LOCAL_AGG_FUNCTIONS = Sets.newHashSet(FunctionSet.COUNT,
+            FunctionSet.MAX, FunctionSet.MIN);
 
     public static final Set<String> LOW_CARD_STRING_FUNCTIONS =
             ImmutableSet.of(FunctionSet.APPEND_TRAILING_CHAR_IF_ABSENT, FunctionSet.CONCAT, FunctionSet.CONCAT_WS,
@@ -91,7 +134,10 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
                     FunctionSet.LTRIM, FunctionSet.REGEXP_EXTRACT, FunctionSet.REGEXP_REPLACE, FunctionSet.REPEAT,
                     FunctionSet.REPLACE, FunctionSet.REVERSE, FunctionSet.RIGHT, FunctionSet.RPAD, FunctionSet.RTRIM,
                     FunctionSet.SPLIT_PART, FunctionSet.SUBSTR, FunctionSet.SUBSTRING, FunctionSet.SUBSTRING_INDEX,
-                    FunctionSet.TRIM, FunctionSet.UPPER, FunctionSet.IF);
+                    FunctionSet.TRIM, FunctionSet.UPPER, FunctionSet.IF, FunctionSet.LENGTH, FunctionSet.CHAR_LENGTH);
+
+    public static final Set<String> LOW_CARD_STRUCT_FUNCTIONS =
+            ImmutableSet.of(FunctionSet.NAMED_STRUCT, FunctionSet.STRUCT, FunctionSet.ROW);
 
     // array<string> support:
     //  array<string> -> array<string>: array function
@@ -104,6 +150,7 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
             FunctionSet.CARDINALITY);
 
     private final SessionVariable sessionVariable;
+    private final boolean isQuery;
 
     // These fields are the same as the fields in the DecodeContext,
     // the difference: these fields store all string information, the
@@ -116,7 +163,20 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
 
     private final Map<Integer, List<CallOperator>> stringAggregateExpressions = Maps.newHashMap();
 
+    private final Map<Integer, Integer> tableFunctionDependencies = Maps.newHashMap();
+
     private final Map<Integer, ScalarOperator> stringRefToDefineExprMap = Maps.newHashMap();
+
+    // Maintains a mapping from structs operators to field columnRefs to use for encoded fields. Currently only fields
+    // which correspond to a column ref can be encoded. All field ColumnRefOperators should have STRING or ARRAY<STRING>
+    // types. Nested structs are not supported.
+    private final Map<ScalarOperator, Map<String, ColumnRefOperator>> structOpToFieldUseStringRef =
+            Maps.newIdentityHashMap();
+
+    // Maintains a mapping from structs ColumnRefs to field columnRefs to use for encoded fields. Currently only fields
+    // which correspond to a column ref can be encoded. All field ColumnRefOperators should have STRING or ARRAY<STRING>
+    // types. Nested structs are not supported.
+    private final Map<Integer, Map<String, ColumnRefOperator>> structRefToFieldUseStringRef = Maps.newHashMap();
 
     // string column use counter, 0 meanings decoded immediately after it was generated.
     // for compute global dict define expressions
@@ -125,18 +185,30 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
     private final List<Integer> scanStringColumns = Lists.newArrayList();
 
     // For these columns we need to disable the associated rewrites.
-    private ColumnRefSet disableRewriteStringColumns = new ColumnRefSet();
+    private final ColumnRefSet disableRewriteStringColumns = new ColumnRefSet();
+
+    private final Set<Integer> joinEqColumnGroupIds = Sets.newHashSet();
+    private final List<Pair<Integer, Integer>> joinEqColumnGroups = Lists.newArrayList();
+
+    private final UnionDictionaryManager unionDictionaryManager;
 
     // operators which are the children of Match operator
     private final ColumnRefSet matchChildren = new ColumnRefSet();
 
-    private final ColumnRefSet physicalOlapScanColumns = new ColumnRefSet();
+    private final ColumnRefSet scanColumnRefSet = new ColumnRefSet();
 
-    public DecodeCollector(SessionVariable session) {
+    // check if there is a blocking node in plan
+    private boolean canBlockingOutput = false;
+
+    public DecodeCollector(SessionVariable session, boolean isQuery) {
         this.sessionVariable = session;
+        this.isQuery = isQuery;
+        unionDictionaryManager = new UnionDictionaryManager(
+                sessionVariable, stringRefToDefineExprMap, globalDicts, joinEqColumnGroupIds);
     }
 
     public void collect(OptExpression root, DecodeContext context) {
+        canBlockingOutput = new CheckBlockingNode().check(root);
         collectImpl(root, null);
         initContext(context);
     }
@@ -146,7 +218,7 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
             return true;
         }
 
-        return physicalOlapScanColumns.containsAll(matchChildren);
+        return scanColumnRefSet.containsAll(matchChildren);
     }
 
     private void fillDisableStringColumns() {
@@ -180,6 +252,18 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
                 }
             }
         });
+
+        this.tableFunctionDependencies.forEach((k, v) -> {
+            dependencyStringIds.computeIfAbsent(v, x -> Sets.newHashSet()).add(k);
+        });
+
+        this.unionDictionaryManager.getUnionColumnGroups().forEach(s -> {
+            final Integer id = s.stream().findAny().orElseThrow();
+            dependencyStringIds.computeIfAbsent(id, x -> Sets.newHashSet()).addAll(s);
+        });
+        for (Pair<Integer, Integer> pair : joinEqColumnGroups) {
+            dependencyStringIds.computeIfAbsent(pair.first, x -> Sets.newHashSet()).add(pair.second);
+        }
         // build relation groups. The same closure is built into the same group
         // eg:
         // 1 -> (2, 3)
@@ -191,37 +275,54 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
         // 2 -> (1,2,3)
         // 3 -> (1,2,3)
         // 4 -> (4)
-        Map<Integer, Set<Integer>> relations = Maps.newHashMap();
+        UnionFind<Integer> unionFind = new UnionFind<>();
         dependencyStringIds.forEach((k, v) -> {
-            relations.computeIfAbsent(k, x -> Sets.newHashSet());
-            final Set<Integer> relation = relations.get(k);
-            relation.addAll(v);
-            relation.add(k);
             for (Integer dependency : v) {
-                relations.put(dependency, relation);
+                unionFind.union(k, dependency);
             }
         });
 
-        final Set<Set<Integer>> relationSets = new HashSet<>(relations.values());
-        // for each relation group if any element in group is disable then disable all group
-        for (Set<Integer> relationSet : relationSets) {
-            for (Integer cid : relationSet) {
-                if (disableRewriteStringColumns.contains(cid)) {
-                    unionAll(disableRewriteStringColumns, relationSet);
-                    break;
-                }
-            }
+        for (int columnId : disableRewriteStringColumns.getColumnIds()) {
+            unionFind.getEquivGroup(columnId).forEach(disableRewriteStringColumns::union);
         }
     }
 
-    private void unionAll(ColumnRefSet columnRefSet, Set<Integer> cids) {
-        for (Integer cid : cids) {
-            columnRefSet.union(cid);
+    private void mergeJoinEqColumnDicts(Set<Integer> mergedUnionDictColumns) {
+        joinEqColumnGroupIds.stream().filter(mergedUnionDictColumns::contains)
+                .forEach(disableRewriteStringColumns::union);
+        for (Pair<Integer, Integer> p : joinEqColumnGroups) {
+            final int colId1 = p.first;
+            final int colId2 = p.second;
+
+            if (disableRewriteStringColumns.contains(colId1)) {
+                disableRewriteStringColumns.union(colId2);
+                continue;
+            }
+            if (disableRewriteStringColumns.contains(colId2)) {
+                disableRewriteStringColumns.union(colId1);
+                continue;
+            }
+
+            final ColumnDict d1 = globalDicts.get(colId1);
+            final ColumnDict d2 = globalDicts.get(colId2);
+            final Pair<ColumnDict, ColumnDict> mergedDict = ColumnDict.merge(d1, d2);
+            if (mergedDict == null) {
+                disableRewriteStringColumns.union(colId1);
+                disableRewriteStringColumns.union(colId2);
+                continue;
+            }
+
+            globalDicts.put(colId1, mergedDict.first);
+            globalDicts.put(colId2, mergedDict.second);
         }
     }
 
     private void initContext(DecodeContext context) {
+        Set<Integer> mergedUnionDictColumns = unionDictionaryManager.getMergedDictColumnIds();
+        mergeJoinEqColumnDicts(mergedUnionDictColumns);
         fillDisableStringColumns();
+        unionDictionaryManager.finalizeColumnDictionaries();
+        context.unionDictionaryManager = unionDictionaryManager;
 
         // choose the profitable string columns
         for (Integer cid : scanStringColumns) {
@@ -235,10 +336,17 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
                 context.allStringColumns.add(cid);
                 continue;
             }
+            if (mergedUnionDictColumns.contains(cid)) {
+                context.allStringColumns.add(cid);
+                continue;
+            }
             List<ScalarOperator> dictExprList = stringExpressions.getOrDefault(cid, Collections.emptyList());
             long allExprNum = dictExprList.size();
             // only query original string-column
-            long worthless = dictExprList.stream().filter(ScalarOperator::isColumnRef).count();
+            long worthless = dictExprList.stream()
+                    .filter(ScalarOperator::isColumnRef)
+                    .filter(x -> !((ColumnRefOperator) x).getHints().contains(JsonPathRewriteRule.COLUMN_REF_HINT))
+                    .count();
             // we believe that the more complex expressions using the dict-column, and the preformance will be better
             if (worthless == 0 && allExprNum != 0) {
                 context.allStringColumns.add(cid);
@@ -248,23 +356,25 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
         }
         // resolve depend-on relation:
         // like: b = upper(a), c = lower(b), if we forbidden a, should forbidden b & c too
-        for (Integer cid : stringRefToDefineExprMap.keySet()) {
+        stringRefToDefineExprMap.forEach((cid, defineExpr) ->  {
             if (matchChildren.contains(cid)) {
-                continue;
+                return;
             }
             if (context.allStringColumns.contains(cid)) {
-                continue;
+                return;
             }
             if (disableRewriteStringColumns.contains(cid)) {
-                continue;
+                return;
             }
             if (!checkDependOnExpr(cid, context.allStringColumns)) {
-                continue;
+                return;
             }
-            if (globalDicts.containsKey(cid) || expressionStringRefCounter.getOrDefault(cid, 0) != 0) {
+            // Structs which pass checkDependOnExpr have at least one encoded field. We keep the structs encoded.
+            if (globalDicts.containsKey(cid) || expressionStringRefCounter.getOrDefault(cid, 0) != 0
+                    || defineExpr.getType().isStructType()) {
                 context.allStringColumns.add(cid);
             }
-        }
+        });
 
         // Save the information of profitable string columns to DecodeContext
         for (Integer cid : context.allStringColumns) {
@@ -306,6 +416,50 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
                 context.operatorDecodeInfo.put(operator, info);
             }
         }
+        // Filling context's structOpToFieldUseStringRefMap and structRefToFieldUseStringRefMap with fields in
+        // context.allStringColumns.
+        context.structOpToFieldUseStringRefMap = structOpToFieldUseStringRef.entrySet().stream()
+                .map(e -> new Pair<>(
+                        e.getKey(),
+                        e.getValue().entrySet().stream()
+                                .filter(e2 -> context.allStringColumns.contains(e2.getValue().getId()))
+                                .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue))))
+                .filter(k -> !k.second.isEmpty())
+                .collect(Collectors.toMap(
+                        p -> p.first,
+                        p -> p.second,
+                        (oldVal, newVal) -> oldVal,
+                        IdentityHashMap::new));
+
+        context.structRefToFieldUseStringRefMap = structRefToFieldUseStringRef.entrySet().stream()
+                .map(e -> new Pair<>(
+                        e.getKey(),
+                        e.getValue().entrySet().stream()
+                                .filter(e2 -> context.allStringColumns.contains(e2.getValue().getId()))
+                                .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue))))
+                .filter(k -> !k.second.isEmpty())
+                .collect(Collectors.toMap(p -> p.first, p -> p.second));
+    }
+
+    // For SubfieldOperators, we just need to get the field column refs, not the whole columns in the struct.
+    private List<ColumnRefOperator> getColumnRefs(ScalarOperator op) {
+        if (op.isColumnRef()) {
+            return List.of((ColumnRefOperator) op);
+        }
+        if (op instanceof SubfieldOperator) {
+            SubfieldOperator subfieldOp = op.cast();
+            Map<String, ColumnRefOperator> fields = getFieldUseStringRefMap(subfieldOp.getChild((0)));
+            if (fields != null
+                    && subfieldOp.getFieldNames().size() == 1
+                    && fields.containsKey(subfieldOp.getFieldNames().get(0))) {
+                return List.of(fields.get(subfieldOp.getFieldNames().get(0)));
+            }
+        }
+        List<ColumnRefOperator> result = Lists.newArrayList();
+        for (ScalarOperator child : op.getChildren()) {
+            result.addAll(getColumnRefs(child));
+        }
+        return result;
     }
 
     private boolean checkDependOnExpr(int cid, Collection<Integer> checkList) {
@@ -316,7 +470,28 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
             return false;
         }
         ScalarOperator define = stringRefToDefineExprMap.get(cid);
-        for (ColumnRefOperator ref : define.getColumnRefs()) {
+        if (define instanceof CallOperator && FunctionSet.ARRAY_AGG.equals(((CallOperator) define).getFnName())) {
+            return define.getChild(0).isColumnRef() &&
+                    checkDependOnExpr(((ColumnRefOperator) define.getChild(0)).getId(), checkList);
+        }
+        if (define.getType().isStructType()) {
+            Map<String, ColumnRefOperator> fieldsMap = getFieldUseStringRefMap(define);
+            if (fieldsMap == null) {
+                return false;
+            }
+            // Any structs with encoded fields should pass. We filter the fields list later.
+            return fieldsMap.values().stream().anyMatch(c -> checkDependOnExpr(c.getId(), checkList));
+        }
+        if (define instanceof SubfieldOperator) {
+            SubfieldOperator subfieldOperator = define.cast();
+            Map<String, ColumnRefOperator> fieldsMap = getFieldUseStringRefMap(subfieldOperator.getChild(0));
+            if (fieldsMap == null || subfieldOperator.getFieldNames().size() != 1) {
+                return false;
+            }
+            ColumnRefOperator fieldRef = fieldsMap.get(subfieldOperator.getFieldNames().get(0));
+            return fieldRef != null && checkDependOnExpr(fieldRef.getId(), checkList);
+        }
+        for (ColumnRefOperator ref : getColumnRefs(define)) {
             if (ref.getId() == cid) {
                 return false;
             }
@@ -327,13 +502,29 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
         return true;
     }
 
+    Map<String, ColumnRefOperator> getFieldUseStringRefMap(ScalarOperator op) {
+        if (op.isColumnRef()) {
+            return structRefToFieldUseStringRef.get(((ColumnRefOperator) op).getId());
+        }
+        return structOpToFieldUseStringRef.get(op);
+    }
+
+    void setDefineExpr(ColumnRefOperator col, ScalarOperator define, int counter) {
+        stringRefToDefineExprMap.putIfAbsent(col.getId(), define);
+        Map<String, ColumnRefOperator> fieldsMap = getFieldUseStringRefMap(define);
+        if (fieldsMap != null) {
+            structRefToFieldUseStringRef.putIfAbsent(col.getId(), fieldsMap);
+        }
+        expressionStringRefCounter.put(col.getId(), counter);
+    }
+
     private DecodeInfo collectImpl(OptExpression optExpression, OptExpression parent) {
         DecodeInfo context;
         if (optExpression.arity() == 1) {
             OptExpression child = optExpression.inputAt(0);
             context = collectImpl(child, optExpression);
         } else {
-            context = new DecodeInfo();
+            context = DecodeInfo.create();
             for (int i = 0; i < optExpression.arity(); ++i) {
                 OptExpression child = optExpression.inputAt(i);
                 context.addChildInfo(collectImpl(child, optExpression));
@@ -353,9 +544,15 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
             }
         });
         info.inputStringColumns.getStream().forEach(c -> {
-            if (expressionStringRefCounter.containsKey(c)) {
-                expressionStringRefCounter.put(c, expressionStringRefCounter.get(c) + 1);
-            }
+            // For structs, we increase the counter of all of its encoded fields
+            List<Integer> columns = structRefToFieldUseStringRef.containsKey(c)
+                    ? structRefToFieldUseStringRef.get(c).values().stream().map(ColumnRefOperator::getId).toList()
+                    : List.of(c);
+            columns.forEach(id -> {
+                if (expressionStringRefCounter.containsKey(id)) {
+                    expressionStringRefCounter.put(id, expressionStringRefCounter.get(id) + 1);
+                }
+            });
         });
         allOperatorDecodeInfo.put(optExpression.getOp(), info);
         collectPredicate(optExpression.getOp(), info);
@@ -369,34 +566,182 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
     }
 
     @Override
+    public DecodeInfo visitPhysicalCTEAnchor(OptExpression optExpression, DecodeInfo context) {
+        return context.createOutputInfo();
+    }
+
+    @Override
+    public DecodeInfo visitPhysicalNoCTE(OptExpression optExpression, DecodeInfo context) {
+        return context.createOutputInfo();
+    }
+
+    @Override
     public DecodeInfo visitPhysicalLimit(OptExpression optExpression, DecodeInfo context) {
         return context.createOutputInfo();
     }
 
     @Override
     public DecodeInfo visitPhysicalTopN(OptExpression optExpression, DecodeInfo context) {
-        return context.createOutputInfo();
+        final DecodeInfo info = context.createOutputInfo();
+
+        PhysicalTopNOperator topN = optExpression.getOp().cast();
+
+        ColumnRefSet disableColumns = new ColumnRefSet();
+        final Map<ColumnRefOperator, CallOperator> preAggCall = topN.getPreAggCall();
+        if (preAggCall != null) {
+            for (ColumnRefOperator key : preAggCall.keySet()) {
+                CallOperator agg = preAggCall.get(key);
+                if (!LOW_CARD_LOCAL_AGG_FUNCTIONS.contains(agg.getFnName())) {
+                    disableColumns.union(agg.getUsedColumns());
+                    disableColumns.union(key);
+                    continue;
+                }
+                if (agg.getChildren().size() != 1 || !agg.getChildren().get(0).isColumnRef()) {
+                    disableColumns.union(agg.getUsedColumns());
+                    disableColumns.union(key);
+                }
+            }
+        }
+
+        if (!disableColumns.isEmpty()) {
+            info.decodeStringColumns.union(info.inputStringColumns);
+            info.decodeStringColumns.intersect(disableColumns);
+            info.inputStringColumns.except(info.decodeStringColumns);
+        }
+
+        info.outputStringColumns.clear();
+        info.outputStringColumns.union(info.inputStringColumns);
+
+        if (preAggCall != null) {
+            for (ColumnRefOperator key : preAggCall.keySet()) {
+                if (disableColumns.contains(key)) {
+                    continue;
+                }
+                CallOperator value = preAggCall.get(key);
+                if (!info.inputStringColumns.containsAll(value.getUsedColumns())) {
+                    continue;
+                }
+                // aggregate ref -> aggregate expr
+                stringAggregateExpressions.computeIfAbsent(key.getId(), x -> Lists.newArrayList()).add(value);
+                // min/max should replace to dict column, count/count distinct don't need
+                if (FunctionSet.MAX.equals(value.getFnName()) || FunctionSet.MIN.equals(value.getFnName())) {
+                    info.outputStringColumns.union(key.getId());
+                    setDefineExpr(key, value, 1);
+                }
+            }
+        }
+
+        return info;
+    }
+
+    @Override
+    public DecodeInfo visitPhysicalFilter(OptExpression optExpression, DecodeInfo context) {
+        if (optExpression.getInputs().get(0).getOp() instanceof PhysicalOlapScanOperator) {
+            // PhysicalFilter->PhysicalOlapScan is a special pattern, the Filter's predicate is extracted from OlapScan,
+            // we should keep the DecodeInfo from it's input.
+            return context.createOutputInfo();
+        }
+        return context.createDecodeInfo();
+    }
+
+    private boolean tryHandleJoinEqPredicate(DecodeInfo decodeInfo,
+                                             ScalarOperator predicate) {
+
+        if (predicate.getOpType() != OperatorType.BINARY) {
+            return false;
+        }
+
+        BinaryPredicateOperator binary = (BinaryPredicateOperator) predicate;
+        if (!binary.getBinaryType().isEquivalence()) {
+            return false;
+        }
+
+        ScalarOperator left = binary.getChild(0);
+        ScalarOperator right = binary.getChild(1);
+        if (!left.isColumnRef() || !right.isColumnRef()) {
+            return false;
+        }
+
+        ColumnRefOperator leftRef = (ColumnRefOperator) left;
+        ColumnRefOperator rightRef = (ColumnRefOperator) right;
+        if (!decodeInfo.inputStringColumns.contains(leftRef) || !decodeInfo.inputStringColumns.contains(rightRef)) {
+            return false;
+        }
+
+        int colId1 = leftRef.getId();
+        int colId2 = rightRef.getId();
+        // Each low-cardinality column can participate in only one equality condition.
+        if (joinEqColumnGroupIds.contains(colId1) || joinEqColumnGroupIds.contains(colId2)) {
+            return false;
+        }
+        // Low-cardinality columns cannot be DefineExpr, because we need merge these two global dicts.
+        if (!globalDicts.containsKey(colId1) || !globalDicts.containsKey(colId2)) {
+            return false;
+        }
+
+        joinEqColumnGroupIds.add(colId1);
+        joinEqColumnGroupIds.add(colId2);
+        joinEqColumnGroups.add(new Pair<>(colId2, colId1));
+        return true;
+    }
+
+    /**
+     * Retain low-cardinality columns used in join ON equality conditions and add them to joinEqColumnGroups.
+     * All other columns used in join ON conditions are added to disableRewriteStringColumns.
+     *
+     * <p> Constraints:
+     * <ul>
+     * <li> Both left and right keys in the ON equality condition must be low-cardinality column refs.
+     * <li> Each low-cardinality column can participate in only one equality condition.
+     * <li> Low-cardinality columns cannot be DefineExpr.
+     * <li> Currently only supports broadcast join.
+     * </ul>
+     */
+    private void extractJoinEqGroups(DecodeInfo decodeInfo, ScalarOperator root) {
+        if (OperatorType.COMPOUND.equals(root.getOpType())) {
+            CompoundPredicateOperator compound = (CompoundPredicateOperator) root;
+            if (compound.isAnd()) {
+                for (ScalarOperator child : compound.getChildren()) {
+                    extractJoinEqGroups(decodeInfo, child);
+                }
+                return;
+            }
+        }
+
+        if (tryHandleJoinEqPredicate(decodeInfo, root)) {
+            return;
+        }
+
+        root.getUsedColumns().getStream().forEach(disableRewriteStringColumns::union);
     }
 
     @Override
     public DecodeInfo visitPhysicalJoin(OptExpression optExpression, DecodeInfo context) {
-        if (context.outputStringColumns.isEmpty()) {
-            return DecodeInfo.EMPTY;
-        }
         PhysicalJoinOperator join = optExpression.getOp().cast();
         DecodeInfo result = context.createOutputInfo();
         if (join.getOnPredicate() == null) {
             return result;
         }
+
         ColumnRefSet onColumns = join.getOnPredicate().getUsedColumns();
-        if (!result.inputStringColumns.containsAny(onColumns)) {
+        if (context.outputStringColumns.isEmpty() || !result.inputStringColumns.containsAny(onColumns)) {
+            onColumns.getStream().forEach(disableRewriteStringColumns::union);
             return result;
         }
+
+        DistributionProperty leftDistribution = optExpression.getRequiredProperties().get(0).getDistributionProperty();
+        DistributionProperty rightDistribution = optExpression.getRequiredProperties().get(1).getDistributionProperty();
+        // Currently only supports broadcast join.
+        if (!sessionVariable.isEnableLowCardinalityOptimizeForJoin() ||
+                (leftDistribution.isShuffle() && rightDistribution.isShuffle())) {
+            onColumns.getStream().forEach(disableRewriteStringColumns::union);
+        } else {
+            extractJoinEqGroups(result, join.getOnPredicate());
+        }
+
         result.outputStringColumns.clear();
         result.inputStringColumns.getStream().forEach(c -> {
-            if (onColumns.contains(c)) {
-                disableRewriteStringColumns.union(c);
-            } else {
+            if (!disableRewriteStringColumns.contains(c)) {
                 result.outputStringColumns.union(c);
             }
         });
@@ -406,9 +751,211 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
     }
 
     @Override
+    public DecodeInfo visitPhysicalUnion(OptExpression optExpression, DecodeInfo context) {
+        return visitPhysicalSetOperation(optExpression, context);
+    }
+
+    @Override
+    public DecodeInfo visitPhysicalIntersect(OptExpression optExpression, DecodeInfo context) {
+        return visitPhysicalSetOperation(optExpression, context);
+    }
+
+    @Override
+    public DecodeInfo visitPhysicalExcept(OptExpression optExpression, DecodeInfo context) {
+        return visitPhysicalSetOperation(optExpression, context);
+    }
+
+    private DecodeInfo visitPhysicalSetOperation(OptExpression optExpression, DecodeInfo context) {
+        if (context.outputStringColumns.isEmpty()) {
+            return DecodeInfo.empty();
+        }
+        PhysicalSetOperation setOp = optExpression.getOp().cast();
+        DistributionSpec dist = optExpression.getRequiredProperties().get(0).getDistributionProperty().getSpec();
+        if (setOp instanceof PhysicalUnionOperator && ((PhysicalUnionOperator) setOp).isUnionAll()) {
+            Preconditions.checkState(!(dist instanceof HashDistributionSpec));
+            DecodeInfo result = DecodeInfo.create();
+            result.inputStringColumns.union(context.outputStringColumns);
+            for (int i = 0; i < setOp.getOutputColumnRefOp().size(); ++i) {
+                final int finalI = i;
+                List<ColumnRefOperator> childColumns = setOp.getChildOutputColumns().stream()
+                        .map(l -> l.get(finalI)).toList();
+                List<Integer> childColumnIds = childColumns.stream().map(ColumnRefOperator::getId).toList();
+                boolean isCandidate = childColumns.stream().allMatch(
+                        c -> context.outputStringColumns.contains(c) || unionDictionaryManager.isSupportedConstant(c));
+                int outputColumnId = setOp.getOutputColumnRefOp().get(i).getId();
+                Integer useChildId;
+                if (isCandidate && (useChildId = unionDictionaryManager.mergeDictionaries(childColumnIds)) != null) {
+                    childColumnIds.stream().filter(context.outputStringColumns::contains).forEach(c -> {
+                        result.usedStringColumns.union(c);
+                        expressionStringRefCounter.put(c, expressionStringRefCounter.getOrDefault(c, 0) + 1);
+                    });
+                    stringRefToDefineExprMap.put(outputColumnId, childColumns.stream()
+                            .filter(c -> c.getId() == useChildId).findAny().orElseThrow());
+                    expressionStringRefCounter.put(outputColumnId, 1);
+                    result.outputStringColumns.union(outputColumnId);
+                } else {
+                    childColumns.stream().filter(c -> context.outputStringColumns.contains(c))
+                            .forEach(result.decodeStringColumns::union);
+                }
+            }
+            result.inputStringColumns.except(result.decodeStringColumns);
+            return result;
+        }
+        if (!(dist instanceof HashDistributionSpec)) {
+            return visit(optExpression, context);
+        }
+        DecodeInfo result = context.createOutputInfo();
+        result.decodeStringColumns.except(result.outputStringColumns);
+        result.outputStringColumns.getStream().forEach(c -> disableRewriteStringColumns.union(c));
+        result.outputStringColumns.clear();
+
+        ColumnRefSet shuffleColumnIds = ColumnRefSet.of();
+        for (int i = 0; i < optExpression.arity(); ++i) {
+            OptExpression child = optExpression.inputAt(i);
+            DistributionSpec childDistSpec = child.getOutputProperty().getDistributionProperty().getSpec();
+            Preconditions.checkState(childDistSpec instanceof HashDistributionSpec);
+            HashDistributionSpec childHashDistSpec = (HashDistributionSpec) childDistSpec;
+            int childIdx = i;
+            EquivalentDescriptor childEqvDesc = childHashDistSpec.getEquivDesc();
+            childHashDistSpec.getShuffleColumns().forEach(shuffleCol -> setOp.getChildOutputColumns().get(childIdx)
+                    .stream()
+                    .filter(colRef -> childEqvDesc.isConnected(shuffleCol, new DistributionCol(colRef.getId(), true)))
+                    .forEach(shuffleColumnIds::union));
+        }
+
+        if (!result.inputStringColumns.containsAny(shuffleColumnIds)) {
+            return result;
+        }
+        shuffleColumnIds.getStream().forEach(c -> disableRewriteStringColumns.union(c));
+        result.decodeStringColumns.except(disableRewriteStringColumns);
+        result.inputStringColumns.except(disableRewriteStringColumns);
+        return result;
+    }
+
+    @Override
+    public DecodeInfo visitPhysicalAnalytic(OptExpression optExpression, DecodeInfo context) {
+        if (context.outputStringColumns.isEmpty()) {
+            return DecodeInfo.empty();
+        }
+        PhysicalWindowOperator windowOp = optExpression.getOp().cast();
+        DecodeInfo info = context.createOutputInfo();
+
+        ColumnRefSet disableColumns = new ColumnRefSet();
+        for (ColumnRefOperator key : windowOp.getAnalyticCall().keySet()) {
+            CallOperator windowCallOp = windowOp.getAnalyticCall().get(key);
+            String fnName = windowCallOp.getFnName();
+            if (!LOW_CARD_WINDOW_FUNCTIONS.contains(fnName)) {
+                disableColumns.union(windowCallOp.getUsedColumns());
+                disableColumns.union(key);
+                continue;
+            }
+
+            // LEAD/LAG with specified default value can not adopt low-cardinality optimization
+            if ((fnName.equals(FunctionSet.LEAD) || fnName.equals(FunctionSet.LAG))) {
+                ScalarOperator lastArg = windowCallOp.getArguments().get(windowCallOp.getArguments().size() - 1);
+                if (!lastArg.isConstantNull()) {
+                    disableColumns.union(windowCallOp.getUsedColumns());
+                    disableColumns.union(key);
+                    continue;
+                }
+            }
+
+            Map<Boolean, List<ScalarOperator>> argGroups = windowCallOp.getChildren().stream()
+                    .filter(Predicate.not(ScalarOperator::isConstant))
+                    .collect(Collectors.partitioningBy(ScalarOperator::isColumnRef));
+
+            List<ScalarOperator> columnRefArgs = argGroups.get(true);
+            List<ScalarOperator> exprArgs = argGroups.get(false);
+
+            // window function must have only one string-type column-ref argument.
+            if (!exprArgs.isEmpty() || columnRefArgs.size() != 1) {
+                disableColumns.union(windowCallOp.getUsedColumns());
+                disableColumns.union(key);
+            }
+        }
+
+        if (!disableColumns.isEmpty()) {
+            info.decodeStringColumns.union(info.inputStringColumns);
+            info.decodeStringColumns.intersect(disableColumns);
+            info.inputStringColumns.except(info.decodeStringColumns);
+        }
+
+        info.outputStringColumns.clear();
+        for (ColumnRefOperator key : windowOp.getAnalyticCall().keySet()) {
+            if (disableColumns.contains(key)) {
+                continue;
+            }
+            CallOperator value = windowOp.getAnalyticCall().get(key);
+            if (!info.inputStringColumns.containsAll(value.getUsedColumns())) {
+                continue;
+            }
+
+            stringAggregateExpressions.computeIfAbsent(key.getId(), x -> Lists.newArrayList()).add(value);
+            // if the function return type is not string or array<string>, then its output column can not be
+            // encoded, however the function evaluation can adopt encoded columns, for examples:
+            // 1. select v1, count(t.a1) over(partition by v1) select t0, unnest(t0.a1) t(a1);
+            // 2. select v1, count(distinct t.a1) over(partition by v1) select t0, unnest(t0.a1) t(a1);
+            // t0.a1 is array<string> column and low-cardinality encoded.
+            if (value.getType().isStringType() || value.getType().isStringArrayType()) {
+                info.outputStringColumns.union(key.getId());
+                setDefineExpr(key, value, 1);
+            }
+        }
+
+        for (ScalarOperator partitionBy : windowOp.getPartitionExpressions()) {
+            Preconditions.checkArgument(partitionBy instanceof ColumnRefOperator);
+            ColumnRefOperator partitionByColumnRef = (ColumnRefOperator) partitionBy;
+            if (info.inputStringColumns.contains(partitionByColumnRef) &&
+                    !info.decodeStringColumns.contains(partitionByColumnRef)) {
+                info.outputStringColumns.union(partitionByColumnRef);
+            }
+        }
+
+        for (Ordering orderBy : windowOp.getOrderByElements()) {
+            ColumnRefOperator orderByColumnRef = orderBy.getColumnRef();
+            if (info.inputStringColumns.contains(orderByColumnRef) &&
+                    !info.decodeStringColumns.contains(orderByColumnRef)) {
+                info.outputStringColumns.union(orderByColumnRef);
+            }
+        }
+
+        // the columns which are not arguments of window functions can also use encoded column;
+        // for an example:
+        // select t.a1, t.a2, lead(t.a1) over(partition by t.a2) select t0, unnest(t0.a1, t0.a2) t(a1,a2);
+        // both t0.a1 and t0.a2 are array<string> and low-cardinality encoded, the output columns: t.a1, t.a2,
+        // lead(t.a1) and t.a2 in partition-by all can adopt encoded columns.
+        ColumnRefSet outerColumnSet = new ColumnRefSet();
+        outerColumnSet.union(context.outputStringColumns);
+        outerColumnSet.intersect(info.inputStringColumns);
+        outerColumnSet.except(info.decodeStringColumns);
+        outerColumnSet.except(disableColumns);
+        info.outputStringColumns.union(outerColumnSet);
+        return info;
+    }
+
+    private boolean shouldProcessAggFunction(CallOperator agg) {
+        final boolean enableArrayAgg = sessionVariable.isEnableArrayAggLowCardinalityOptimize()
+                && sessionVariable.isEnableArrayLowCardinalityOptimize()
+                && sessionVariable.isEnableStructLowCardinalityOptimize();
+        final boolean isArrayAgg = FunctionSet.ARRAY_AGG.equals(agg.getFnName());
+        if (isArrayAgg && !enableArrayAgg) {
+            return false;
+        }
+        if (!LOW_CARD_AGGREGATE_FUNCTIONS.contains(agg.getFnName())) {
+            return false;
+        }
+        if (isArrayAgg) {
+            // dictify array_agg only when the first child can be dictified.
+            return agg.getChildren().stream().allMatch(c -> c.isColumnRef() || c.isConstantRef())
+                    && agg.getChild(0).isColumnRef() && agg.getFunction().getArgs()[0].isStringType();
+        }
+        return agg.getChildren().size() == 1 && agg.getChildren().get(0).isColumnRef();
+    }
+
+    @Override
     public DecodeInfo visitPhysicalHashAggregate(OptExpression optExpression, DecodeInfo context) {
         if (context.outputStringColumns.isEmpty()) {
-            return DecodeInfo.EMPTY;
+            return DecodeInfo.empty();
         }
         PhysicalHashAggregateOperator aggregate = optExpression.getOp().cast();
         DecodeInfo info = context.createOutputInfo();
@@ -416,12 +963,7 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
         ColumnRefSet disableColumns = new ColumnRefSet();
         for (ColumnRefOperator key : aggregate.getAggregations().keySet()) {
             CallOperator agg = aggregate.getAggregations().get(key);
-            if (!LOW_CARD_AGGREGATE_FUNCTIONS.contains(agg.getFnName())) {
-                disableColumns.union(agg.getUsedColumns());
-                disableColumns.union(key);
-                continue;
-            }
-            if (agg.getChildren().size() != 1 || !agg.getChildren().get(0).isColumnRef()) {
+            if (!shouldProcessAggFunction(agg)) {
                 disableColumns.union(agg.getUsedColumns());
                 disableColumns.union(key);
             }
@@ -439,17 +981,43 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
                 continue;
             }
             CallOperator value = aggregate.getAggregations().get(key);
-            if (!info.inputStringColumns.containsAll(value.getUsedColumns())) {
+            if (FunctionSet.ARRAY_AGG.equals(value.getFnName())) {
+                if (!value.getChild(0).isColumnRef() ||
+                        !info.inputStringColumns.contains(value.getChild(0).cast())) {
+                    continue;
+                }
+            } else if (!info.inputStringColumns.containsAll(value.getUsedColumns())) {
                 continue;
             }
             // aggregate ref -> aggregate expr
             stringAggregateExpressions.computeIfAbsent(key.getId(), x -> Lists.newArrayList()).add(value);
-            // min/max should replace to dict column, count/count distinct don't need
-            if (FunctionSet.MAX.equals(value.getFnName()) || FunctionSet.MIN.equals(value.getFnName())) {
+            if (supportLowCardinality(value.getType())) {
                 info.outputStringColumns.union(key.getId());
-                stringRefToDefineExprMap.putIfAbsent(key.getId(), value);
-                expressionStringRefCounter.put(key.getId(), 1);
-            } else if (aggregate.getType().isLocal() || aggregate.getType().isDistinctLocal()) {
+                AggregateFunction aggFn = (AggregateFunction) value.getFunction();
+                if (aggFn.getIntermediateTypeOrReturnType().isStructType()
+                        && !structRefToFieldUseStringRef.containsKey(key.getId())) {
+                    final Map<String, ColumnRefOperator> fieldsData;
+                    if (FunctionSet.ARRAY_AGG.equals(aggFn.functionName())) {
+                        fieldsData = Maps.newHashMap();
+                        StructType structType = (StructType) aggFn.getIntermediateTypeOrReturnType();
+                        Preconditions.checkState(structType.getFields().size() == value.getArguments().size());
+                        for (int i = 0; i < value.getArguments().size(); i++) {
+                            if (value.getArguments().get(i).isColumnRef()
+                                    && info.inputStringColumns.contains(value.getArguments().get(i).cast())) {
+                                fieldsData.put(structType.getField(i).getName(), value.getArguments().get(i).cast());
+                            }
+                        }
+                    } else if (FunctionSet.ANY_VALUE.equals(aggFn.functionName())) {
+                        fieldsData = getFieldUseStringRefMap(value.getArguments().get(0));
+                    } else {
+                        throw new UnsupportedOperationException(
+                                String.format("Unsupported function: %s with Struct Type", aggFn.functionName()));
+                    }
+                    Preconditions.checkNotNull(fieldsData);
+                    structOpToFieldUseStringRef.put(value, fieldsData);
+                }
+                setDefineExpr(key, value, 1);
+            } else if (aggregate.getType().isLocal() || aggregate.getType().isDistinct()) {
                 // count/count distinct, need output dict-set in 1st stage
                 info.outputStringColumns.union(key.getId());
             }
@@ -473,7 +1041,7 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
     @Override
     public DecodeInfo visitPhysicalTableFunction(OptExpression optExpression, DecodeInfo context) {
         if (context.outputStringColumns.isEmpty()) {
-            return DecodeInfo.EMPTY;
+            return DecodeInfo.empty();
         }
         DecodeInfo info = context.createOutputInfo();
         PhysicalTableFunctionOperator tableFunc = optExpression.getOp().cast();
@@ -501,9 +1069,9 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
             ColumnRefOperator unnestInput = tableFunc.getFnParamColumnRefs().get(i);
 
             if (info.inputStringColumns.contains(unnestInput)) {
-                stringRefToDefineExprMap.put(unnestOutput.getId(), unnestInput);
-                expressionStringRefCounter.put(unnestOutput.getId(), 1);
+                setDefineExpr(unnestOutput, unnestInput, 1);
                 info.outputStringColumns.union(unnestOutput);
+                tableFunctionDependencies.put(unnestInput.getId(), unnestOutput.getId());
             }
         }
         return info;
@@ -512,7 +1080,7 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
     @Override
     public DecodeInfo visitPhysicalDistribution(OptExpression optExpression, DecodeInfo context) {
         if (context.outputStringColumns.isEmpty()) {
-            return DecodeInfo.EMPTY;
+            return DecodeInfo.empty();
         }
         return context.createOutputInfo();
     }
@@ -521,28 +1089,21 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
     public DecodeInfo visitPhysicalOlapScan(OptExpression optExpression, DecodeInfo context) {
         PhysicalOlapScanOperator scan = optExpression.getOp().cast();
         OlapTable table = (OlapTable) scan.getTable();
-        long version = table.getPartitions().stream().map(Partition::getVisibleVersionTime).max(Long::compareTo)
-                .orElse(0L);
+        long version = table.getPartitions().stream().flatMap(p -> p.getSubPartitions().stream()).map(
+                PhysicalPartition::getVisibleVersionTime).max(Long::compareTo).orElse(0L);
 
-        if ((table.getKeysType().equals(KeysType.PRIMARY_KEYS))) {
-            return DecodeInfo.EMPTY;
-        }
         if (table.hasForbiddenGlobalDict()) {
-            return DecodeInfo.EMPTY;
+            return DecodeInfo.empty();
         }
         if (table.inputHasTempPartition(scan.getSelectedPartitionId())) {
-            return DecodeInfo.EMPTY;
+            return DecodeInfo.empty();
         }
 
         // check dict column
-        DecodeInfo info = new DecodeInfo();
+        DecodeInfo info = DecodeInfo.create();
         for (ColumnRefOperator column : scan.getColRefToColumnMetaMap().keySet()) {
             // Condition 1:
-            if (!supportLowCardinality(column.getType())) {
-                continue;
-            }
-
-            if (!sessionVariable.isEnableArrayLowCardinalityOptimize() && column.getType().isArrayType()) {
+            if (!supportAndEnabledLowCardinalityForScanOperator(column.getType())) {
                 continue;
             }
 
@@ -550,16 +1111,21 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
                 continue;
             }
 
-            ColumnStatistic columnStatistic = GlobalStateMgr.getCurrentState().getStatisticStorage()
-                    .getColumnStatistic(table, column.getName());
-            // Condition 2: the varchar column is low cardinality string column
+            // If it's not an extended column, we have to check the cardinality of the column.
+            // TODO(murphy) support collect cardinality of extended column
+            if (!checkExtendedColumn(scan, column)) {
+                ColumnStatistic columnStatistic = GlobalStateMgr.getCurrentState().getStatisticStorage()
+                        .getColumnStatistic(table, column.getName());
+                // Condition 2: the varchar column is low cardinality string column
 
-            boolean alwaysCollectDict = sessionVariable.isAlwaysCollectDict();
-            if (!alwaysCollectDict && !column.getType().isArrayType() && !FeConstants.USE_MOCK_DICT_MANAGER &&
-                    (columnStatistic.isUnknown() ||
-                            columnStatistic.getDistinctValuesCount() > CacheDictManager.LOW_CARDINALITY_THRESHOLD)) {
-                LOG.debug("{} isn't low cardinality string column", column.getName());
-                continue;
+                boolean alwaysCollectDict = sessionVariable.isAlwaysCollectDict();
+                if (!alwaysCollectDict && !column.getType().isArrayType() && !FeConstants.USE_MOCK_DICT_MANAGER &&
+                        (columnStatistic.isUnknown() ||
+                                columnStatistic.getDistinctValuesCount() >
+                                        CacheDictManager.LOW_CARDINALITY_THRESHOLD)) {
+                    LOG.debug("{} isn't low cardinality string column", column.getName());
+                    continue;
+                }
             }
 
             // Condition 3: the varchar column has collected global dict
@@ -569,34 +1135,161 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
                 continue;
             }
 
-            Optional<ColumnDict> dict = IDictManager.getInstance().getGlobalDict(table.getId(), columnObj.getColumnId());
+            Optional<ColumnDict> dict =
+                    IDictManager.getInstance().getGlobalDict(table.getId(), columnObj.getColumnId());
             // cache reaches capacity limit, randomly eliminate some keys
             // then we will get an empty dictionary.
             if (dict.isEmpty()) {
                 continue;
             }
 
-            info.outputStringColumns.union(column);
-            info.inputStringColumns.union(column);
-            stringRefToDefineExprMap.put(column.getId(), column);
-            scanStringColumns.add(column.getId());
-            expressionStringRefCounter.put(column.getId(), 0);
-            globalDicts.put(column.getId(), dict.get());
-            physicalOlapScanColumns.union(column.getId());
+            markedAsGlobalDictOpt(info, column, dict.get());
         }
 
         if (info.outputStringColumns.isEmpty()) {
-            return DecodeInfo.EMPTY;
+            return DecodeInfo.empty();
         }
 
         return info;
     }
 
+    private boolean banArrayColumnWithPredicate(PhysicalScanOperator scan, ColumnRefOperator column) {
+        return column.getType().isArrayType() &&
+                scan.getPredicate() != null && scan.getPredicate().getColumnRefs().contains(column);
+    }
+
+    private Pair<Boolean, Optional<ColumnDict>> checkConnectorGlobalDict(PhysicalScanOperator scan, Table table,
+                                                                         ColumnRefOperator column) {
+        // Condition 1:
+        if (!supportAndEnabledLowCardinalityForScanOperator(column.getType())) {
+            return new Pair<>(false, Optional.empty());
+        }
+
+        // Condition 1.1:
+        if (banArrayColumnWithPredicate(scan, column)) {
+            return new Pair<>(false, Optional.empty());
+        }
+
+        // Condition 2: the varchar column is low cardinality string column
+        ColumnStatistic columnStatistic = GlobalStateMgr.getCurrentState().getStatisticStorage()
+                .getConnectorTableStatistics(table, List.of(column.getName())).get(0).getColumnStatistic();
+
+        if (!columnStatistic.isUnknown() &&
+                columnStatistic.getDistinctValuesCount() > CacheDictManager.LOW_CARDINALITY_THRESHOLD) {
+            LOG.debug("{} isn't low cardinality string column", column.getName());
+            return new Pair<>(false, Optional.empty());
+        }
+
+        boolean alwaysCollectDict = sessionVariable.isAlwaysCollectDictOnLake();
+        if (!alwaysCollectDict && !FeConstants.USE_MOCK_DICT_MANAGER && columnStatistic.isUnknown()) {
+            LOG.debug("{} isn't low cardinality string column", column.getName());
+            return new Pair<>(false, Optional.empty());
+        }
+
+        // Condition 3: the varchar column has collected global dict
+        if (!IRelaxDictManager.getInstance().hasGlobalDict(table.getUUID(), column.getName())) {
+            LOG.debug("{} doesn't have global dict", column.getName());
+            return new Pair<>(false, Optional.empty());
+        }
+
+        Optional<ColumnDict> dict = IRelaxDictManager.getInstance().getGlobalDict(table.getUUID(),
+                column.getName());
+        // cache reaches capacity limit, randomly eliminate some keys
+        // then we will get an empty dictionary.
+        if (dict.isEmpty() || dict.get().getVersion() > CacheRelaxDictManager.PERIOD_VERSION_THRESHOLD) {
+            return new Pair<>(false, Optional.empty());
+        }
+        return new Pair<>(true, dict);
+    }
+
+    @Override
+    public DecodeInfo visitPhysicalHiveScan(OptExpression optExpression, DecodeInfo context) {
+        if (!canBlockingOutput || !sessionVariable.isUseLowCardinalityOptimizeOnLake() || !isQuery) {
+            return DecodeInfo.empty();
+        }
+        PhysicalHiveScanOperator scan = optExpression.getOp().cast();
+        HiveTable table = (HiveTable) scan.getTable();
+
+        // only support parquet
+        if (table.getStorageFormat() == null || !table.getStorageFormat().equals(HiveStorageFormat.PARQUET)) {
+            return DecodeInfo.empty();
+        }
+
+        // check dict column
+        DecodeInfo info = DecodeInfo.create();
+        for (ColumnRefOperator column : scan.getColRefToColumnMetaMap().keySet()) {
+            // don't collect partition columns
+            if (table.getPartitionColumnNames().contains(column.getName())) {
+                continue;
+            }
+
+            Pair<Boolean, Optional<ColumnDict>> res = checkConnectorGlobalDict(scan, table, column);
+            if (!res.first) {
+                continue;
+            }
+
+            markedAsGlobalDictOpt(info, column, res.second.get());
+        }
+
+        if (info.outputStringColumns.isEmpty()) {
+            return DecodeInfo.empty();
+        }
+
+        return info;
+    }
+
+    @Override
+    public DecodeInfo visitPhysicalIcebergScan(OptExpression optExpression, DecodeInfo context) {
+        if (!canBlockingOutput || !sessionVariable.isUseLowCardinalityOptimizeOnLake() || !isQuery) {
+            return DecodeInfo.empty();
+        }
+
+        PhysicalIcebergScanOperator scan = optExpression.getOp().cast();
+        IcebergTable table = (IcebergTable) scan.getTable();
+
+        // only support parquet
+        if (!table.getNativeTable().properties().getOrDefault(DEFAULT_FILE_FORMAT, DEFAULT_FILE_FORMAT_DEFAULT).
+                equalsIgnoreCase("parquet")) {
+            return DecodeInfo.empty();
+        }
+
+        // check dict column
+        DecodeInfo info = DecodeInfo.create();
+        for (ColumnRefOperator column : scan.getColRefToColumnMetaMap().keySet()) {
+            if (table.getPartitionColumnNames().contains(column.getName())) {
+                continue;
+            }
+
+            Pair<Boolean, Optional<ColumnDict>> res = checkConnectorGlobalDict(scan, table, column);
+            if (!res.first) {
+                continue;
+            }
+
+            markedAsGlobalDictOpt(info, column, res.second.get());
+        }
+
+        if (info.outputStringColumns.isEmpty()) {
+            return DecodeInfo.empty();
+        }
+
+        return info;
+    }
+
+    private void markedAsGlobalDictOpt(DecodeInfo info, ColumnRefOperator column, ColumnDict dict) {
+        info.outputStringColumns.union(column);
+        info.inputStringColumns.union(column);
+        stringRefToDefineExprMap.put(column.getId(), column);
+        scanStringColumns.add(column.getId());
+        expressionStringRefCounter.put(column.getId(), 0);
+        globalDicts.put(column.getId(), dict);
+        scanColumnRefSet.union(column.getId());
+    }
+
     // complex type may be support prune subfield, doesn't read data
     private boolean checkComplexTypeInvalid(PhysicalOlapScanOperator scan, ColumnRefOperator column) {
-        String colName = scan.getColRefToColumnMetaMap().get(column).getName();
+        String colId = scan.getColRefToColumnMetaMap().get(column).getColumnId().getId();
         for (ColumnAccessPath path : scan.getColumnAccessPaths()) {
-            if (!StringUtils.equalsIgnoreCase(colName, path.getPath()) || path.getType() != TAccessPathType.ROOT) {
+            if (!StringUtils.equalsIgnoreCase(colId, path.getPath()) || path.getType() != TAccessPathType.ROOT) {
                 continue;
             }
             // check the read path
@@ -607,11 +1300,33 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
         return true;
     }
 
+    /**
+     * Check if the column is an extended string column, if so, it can be used for global dict optimization.
+     */
+    private boolean checkExtendedColumn(PhysicalOlapScanOperator scan, ColumnRefOperator column) {
+        if (!sessionVariable.isEnableJSONV2DictOpt()) {
+            return false;
+        }
+        String colId = scan.getColRefToColumnMetaMap().get(column).getColumnId().getId();
+        for (ColumnAccessPath path : scan.getColumnAccessPaths()) {
+            if (path.isExtended() &&
+                    path.getLinearPath().equals(colId) &&
+                    path.getType() == TAccessPathType.ROOT &&
+                    path.getValueType().isStringType()) {
+                return true;
+            }
+        }
+
+        return false;
+    }
+
     private void collectPredicate(Operator operator, DecodeInfo info) {
         if (operator.getPredicate() == null) {
             return;
         }
-        DictExpressionCollector dictExpressionCollector = new DictExpressionCollector(info.outputStringColumns);
+        DictExpressionCollector dictExpressionCollector = new DictExpressionCollector(info.outputStringColumns,
+                structOpToFieldUseStringRef, this::getFieldUseStringRefMap,
+                sessionVariable.isEnableStructLowCardinalityOptimize());
         dictExpressionCollector.collect(operator.getPredicate());
 
         info.outputStringColumns.getStream().forEach(c -> {
@@ -630,7 +1345,11 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
             return;
         }
 
-        ColumnRefSet decodeInput = info.outputStringColumns;
+        ColumnRefSet decodeInput = new ColumnRefSet();
+        decodeInput.union(info.outputStringColumns);
+        info.outputStringColumns.getStream().filter(structRefToFieldUseStringRef::containsKey).forEach(
+                c -> decodeInput.union(structRefToFieldUseStringRef.get(c).values())
+        );
         info.outputStringColumns = new ColumnRefSet();
         for (ColumnRefOperator key : operator.getProjection().getColumnRefMap().keySet()) {
             if (decodeInput.contains(key)) {
@@ -638,7 +1357,9 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
                 continue;
             }
 
-            DictExpressionCollector dictExpressionCollector = new DictExpressionCollector(decodeInput);
+            DictExpressionCollector dictExpressionCollector = new DictExpressionCollector(decodeInput,
+                    structOpToFieldUseStringRef, this::getFieldUseStringRefMap,
+                    sessionVariable.isEnableStructLowCardinalityOptimize());
 
             ScalarOperator value = operator.getProjection().getColumnRefMap().get(key);
             dictExpressionCollector.collect(value);
@@ -654,19 +1375,40 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
                 // whole expression support dictionary, define new dict column
                 // only support varchar/array<varchar> column
                 if (exprs.contains(value) && supportLowCardinality(value.getType())) {
-                    stringRefToDefineExprMap.put(key.getId(), value);
-                    expressionStringRefCounter.putIfAbsent(key.getId(), 0);
+                    setDefineExpr(key, value, 0);
                     info.outputStringColumns.union(key.getId());
-                } else {
-                    info.usedStringColumns.union(c);
                 }
+                info.usedStringColumns.union(c);
             });
+            if (structOpToFieldUseStringRef.containsKey(value)) {
+                setDefineExpr(key, value, 0);
+                info.outputStringColumns.union(key.getId());
+            }
+            unionDictionaryManager.recordIfConstant(key, value);
             matchChildren.union(dictExpressionCollector.matchChildren);
         }
     }
 
-    private static boolean supportLowCardinality(Type type) {
-        return type.isVarchar() || (type.isArrayType() && ((ArrayType) type).getItemType().isVarchar());
+    static boolean supportLowCardinality(Type type) {
+        return type.isVarchar()
+                || (type.isArrayType() && ((ArrayType) type).getItemType().isVarchar())
+                || type.isStructType();
+    }
+
+    private boolean supportAndEnabledLowCardinalityForScanOperator(Type type) {
+        if (!supportLowCardinality(type)) {
+            return false;
+        } else if (type.isArrayType()) {
+            return sessionVariable.isEnableArrayLowCardinalityOptimize();
+        } else if (type.isStructType()) {
+            return false;
+        }
+        return true;
+    }
+
+    @TestOnly
+    public boolean canBlockingOutput() {
+        return canBlockingOutput;
     }
 
     // Check if an expression can be optimized using a dictionary
@@ -682,8 +1424,19 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
 
         private final ColumnRefSet matchChildren = new ColumnRefSet();
 
-        public DictExpressionCollector(ColumnRefSet allDictColumnRefs) {
+        private final Map<ScalarOperator, Map<String, ColumnRefOperator>> structOpToFieldUseStringRef;
+        private final java.util.function.Function<ScalarOperator, Map<String, ColumnRefOperator>> getFieldsUseStringRef;
+        private final boolean isEnableStructLowCardinalityOptimize;
+
+        public DictExpressionCollector(ColumnRefSet allDictColumnRefs,
+                                       Map<ScalarOperator, Map<String, ColumnRefOperator>> structOpToFieldUseStringRef,
+                                       java.util.function.Function<ScalarOperator, Map<String, ColumnRefOperator>>
+                                               getFieldsUseStringRef,
+                                       boolean isEnableStructLowCardinalityOptimize) {
             this.allDictColumnRefs = allDictColumnRefs;
+            this.structOpToFieldUseStringRef = structOpToFieldUseStringRef;
+            this.getFieldsUseStringRef = getFieldsUseStringRef;
+            this.isEnableStructLowCardinalityOptimize = isEnableStructLowCardinalityOptimize;
         }
 
         public void collect(ScalarOperator scalarOperator) {
@@ -695,7 +1448,7 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
             if (dictColumn.isColumnRef()) {
                 dictExpressions.computeIfAbsent(((ColumnRefOperator) dictColumn).getId(),
                         x -> Lists.newArrayList()).add(dictExpr);
-            } else if (!dictColumn.isConstant()) {
+            } else if (!dictColumn.isConstant() && !dictColumn.getType().isStructType()) {
                 // array[x], array_min(x)
                 List<ColumnRefOperator> used = dictColumn.getColumnRefs();
                 Preconditions.checkState(used.stream().distinct().count() == 1);
@@ -724,10 +1477,12 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
             if (collectors.stream().allMatch(CONSTANTS::equals)) {
                 return CONSTANTS;
             }
-
+            if (!(scalarOperator instanceof SubfieldOperator)
+                    && collectors.stream().anyMatch(s -> s.getType().isStructType())) {
+                return forbidden(collectors, scalarOperator);
+            }
             long variableExpr = collectors.stream().filter(VARIABLES::equals).count();
-            List<ScalarOperator> dictColumns = collectors.stream().filter(s -> !s.isConstant()).distinct()
-                    .collect(Collectors.toList());
+            List<ScalarOperator> dictColumns = collectors.stream().filter(s -> !s.isConstant()).distinct().toList();
             // only one scalar operator, and it's a dict column
             if (dictColumns.size() == 1 && variableExpr == 0) {
                 return dictColumns.get(0);
@@ -752,7 +1507,8 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
         }
 
         private ScalarOperator merge(List<ScalarOperator> collectors, ScalarOperator scalarOperator) {
-            if (collectors.stream().anyMatch(s -> s.getType().isArrayType())) {
+            if (collectors.stream().anyMatch(s -> s.getType().isArrayType()
+                    || s.getType().isStructType())) {
                 return forbidden(collectors, scalarOperator);
             }
             return mergeWithArray(collectors, scalarOperator);
@@ -789,7 +1545,8 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
             }
 
             if (FunctionSet.ARRAY_MIN.equalsIgnoreCase(call.getFnName()) ||
-                    FunctionSet.ARRAY_MAX.equalsIgnoreCase(call.getFnName())) {
+                    FunctionSet.ARRAY_MAX.equalsIgnoreCase(call.getFnName())
+                    || FunctionSet.ANY_VALUE.equals(call.getFnName())) {
                 // for support: `dictExpr(array_min(array) = 'a')`, not `dictExpr(array_min(array)) = 'a'`
                 ScalarOperator result = mergeWithArray(visitChildren(call, context), call);
                 return !result.isConstant() ? call : result;
@@ -800,6 +1557,30 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
                     LOW_CARD_AGGREGATE_FUNCTIONS.contains(call.getFnName())) {
                 return mergeWithArray(visitChildren(call, context), call);
             }
+            if (isEnableStructLowCardinalityOptimize && LOW_CARD_STRUCT_FUNCTIONS.contains(call.getFnName())
+                    && call.getChildren().stream().allMatch(
+                            c -> (c.isColumnRef() || c.isConstantRef()) && !c.getType().isStructType())) {
+                Map<String, ColumnRefOperator> fieldMap = Maps.newHashMap();
+                List<ScalarOperator> newChildren = visitChildren(call, context);
+                if (newChildren.stream().allMatch(CONSTANTS::equals)) {
+                    return CONSTANTS;
+                }
+                StructType structType = (StructType) call.getType();
+                for (int i = 0; i < newChildren.size(); ++i) {
+                    ScalarOperator newChild = newChildren.get(i);
+                    if (!newChild.isConstant()) {
+                        if (newChild.isColumnRef()) {
+                            int idx = FunctionSet.NAMED_STRUCT.equals(call.getFnName()) ? i / 2 : i;
+                            fieldMap.put(structType.getField(idx).getName(), (ColumnRefOperator) newChild);
+                        }
+                    }
+                }
+                if (!fieldMap.isEmpty()) {
+                    structOpToFieldUseStringRef.put(call, fieldMap);
+                    return call;
+                }
+                return VARIABLES;
+            }
             return forbidden(visitChildren(call, context), call);
         }
 
@@ -809,10 +1590,35 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
             if (supportLowCardinality(collectionElementOp.getChild(0).getType())) {
                 ScalarOperator result = mergeWithArray(children, collectionElementOp);
                 // for support: `dictExpr(array[0] = 'a')`, not `dictExpr(array[0]) = 'a'`
-                return !result.isConstant() ? collectionElementOp : result;
+                if (result.isConstant()) {
+                    return result;
+                } else if (result == collectionElementOp.getChild(0)) {
+                    return collectionElementOp;
+                } else {
+                    return new CollectionElementOperator(collectionElementOp.getType(),
+                            result, collectionElementOp.getChild(1), collectionElementOp.isCheckOutOfBounds());
+                }
 
             }
             return forbidden(children, collectionElementOp);
+        }
+
+        @Override
+        public ScalarOperator visitSubfield(SubfieldOperator op, Void context) {
+            ScalarOperator result = mergeWithArray(visitChildren(op, context), op);
+            if (result.isConstant()) {
+                return result;
+            }
+            ScalarOperator child = op.getChild(0);
+            Map<String, ColumnRefOperator> fieldsUseStringRef = getFieldsUseStringRef.apply(child);
+            if (op.getFieldNames().size() == 1 && fieldsUseStringRef != null
+                    && fieldsUseStringRef.containsKey(op.getFieldNames().get(0))) {
+                return fieldsUseStringRef.get(op.getFieldNames().get(0));
+            }
+            if (result.isColumnRef()) {
+                saveDictExpr(result, op);
+            }
+            return VARIABLES;
         }
 
         @Override
@@ -860,6 +1666,35 @@ public class DecodeCollector extends OptExpressionVisitor<DecodeInfo, DecodeInfo
         public ScalarOperator visitMatchExprOperator(MatchExprOperator operator, Void context) {
             matchChildren.union((ColumnRefOperator) operator.getChildren().get(0));
             return merge(visitChildren(operator, context), operator);
+        }
+    }
+
+    public static class CheckBlockingNode extends OptExpressionVisitor<Boolean, Void> {
+        private boolean visitChild(OptExpression optExpression, Void context) {
+            if (optExpression.getInputs().size() != 1) {
+                return false;
+            }
+            OptExpression child = optExpression.getInputs().get(0);
+            return child.getOp().accept(this, child, context);
+        }
+
+        @Override
+        public Boolean visit(OptExpression optExpression, Void context) {
+            return visitChild(optExpression, context);
+        }
+
+        @Override
+        public Boolean visitPhysicalTopN(OptExpression optExpression, Void context) {
+            return true;
+        }
+
+        @Override
+        public Boolean visitPhysicalHashAggregate(OptExpression optExpression, Void context) {
+            return true;
+        }
+
+        public boolean check(OptExpression optExpression) {
+            return optExpression.getOp().accept(this, optExpression, null);
         }
     }
 }
