@@ -15,22 +15,33 @@
 package com.starrocks.sql.optimizer.statistics;
 
 import com.google.common.base.Preconditions;
+import com.starrocks.catalog.FunctionSet;
+import com.starrocks.common.Pair;
+import com.starrocks.sql.ast.expression.BinaryType;
 import com.starrocks.sql.optimizer.Utils;
 import com.starrocks.sql.optimizer.operator.OperatorType;
 import com.starrocks.sql.optimizer.operator.scalar.BinaryPredicateOperator;
+import com.starrocks.sql.optimizer.operator.scalar.CallOperator;
 import com.starrocks.sql.optimizer.operator.scalar.CastOperator;
 import com.starrocks.sql.optimizer.operator.scalar.ColumnRefOperator;
 import com.starrocks.sql.optimizer.operator.scalar.CompoundPredicateOperator;
 import com.starrocks.sql.optimizer.operator.scalar.ConstantOperator;
 import com.starrocks.sql.optimizer.operator.scalar.InPredicateOperator;
 import com.starrocks.sql.optimizer.operator.scalar.IsNullPredicateOperator;
+import com.starrocks.sql.optimizer.operator.scalar.LargeInPredicateOperator;
 import com.starrocks.sql.optimizer.operator.scalar.ScalarOperator;
 import com.starrocks.sql.optimizer.operator.scalar.ScalarOperatorVisitor;
+import com.starrocks.sql.spm.SPMFunctions;
+import com.starrocks.type.BooleanType;
 import org.apache.commons.math3.util.Precision;
 
 import java.util.List;
+import java.util.Map;
 import java.util.Optional;
 import java.util.stream.Collectors;
+
+import static com.starrocks.sql.optimizer.statistics.HistogramStatisticsUtils.estimateInPredicateWithHistogram;
+import static com.starrocks.sql.optimizer.statistics.StatisticsEstimateUtils.computeCompoundStatsWithMultiColumnOptimize;
 
 public class PredicateStatisticsCalculator {
     public static Statistics statisticsCalculate(ScalarOperator predicate, Statistics statistics) {
@@ -75,9 +86,12 @@ public class PredicateStatisticsCalculator {
                 return false;
             }
             // extract range predicate scalar operator with unknown column statistics will not eval
-            if (predicate.isFromPredicateRangeDerive() &&
-                    statistics.getColumnStatistics().values().stream().anyMatch(ColumnStatistic::isUnknown)) {
-                return false;
+            if (predicate.isFromPredicateRangeDerive()) {
+                for (ColumnStatistic cs : statistics.getColumnStatistics().values()) {
+                    if (cs.isUnknown()) {
+                        return false;
+                    }
+                }
             }
             return true;
         }
@@ -90,8 +104,32 @@ public class PredicateStatisticsCalculator {
             double outputRowCount =
                     statistics.getOutputRowCount() * StatisticsEstimateCoefficient.PREDICATE_UNKNOWN_FILTER_COEFFICIENT;
             return StatisticsEstimateUtils.adjustStatisticsByRowCount(
-                    Statistics.buildFrom(statistics).setOutputRowCount(outputRowCount).build(),
+                    statistics.withOutputRowCount(outputRowCount),
                     outputRowCount);
+        }
+
+        @Override
+        public Statistics visitVariableReference(ColumnRefOperator variable, Void context) {
+            if (!checkNeedEvalEstimate(variable)) {
+                return statistics;
+            }
+
+            if (!variable.getType().isBoolean()) {
+                return visit(variable, context);
+            }
+
+            try {
+                BinaryPredicateOperator binaryPredicateOperator = new BinaryPredicateOperator(
+                        BinaryType.EQ, variable, ConstantOperator.createBoolean(true));
+                return visitBinaryPredicate(binaryPredicateOperator, context);
+            } catch (Exception e) {
+                return visit(variable, context);
+            }
+        }
+
+        @Override
+        public Statistics visitLargeInPredicate(LargeInPredicateOperator predicate, Void context) {
+            throw new UnsupportedOperationException("not support large in predicate in the PredicateStatisticsCalculator");
         }
 
         @Override
@@ -99,16 +137,38 @@ public class PredicateStatisticsCalculator {
             if (!checkNeedEvalEstimate(predicate)) {
                 return statistics;
             }
+            if (SPMFunctions.isSPMFunctions(predicate)) {
+                if (SPMFunctions.canRevert2ScalarOperator(predicate)) {
+                    predicate = (InPredicateOperator) SPMFunctions.revertSPMFunctions(predicate).get(0);
+                } else {
+                    return statistics;
+                }
+            }
             double selectivity;
 
             ScalarOperator firstChild = getChildForCastOperator(predicate.getChild(0));
-            List<ScalarOperator> otherChildrenList =
-                    predicate.getChildren().stream().skip(1).map(this::getChildForCastOperator).distinct()
-                            .collect(Collectors.toList());
             // 1. compute the inPredicate children column statistics
             ColumnStatistic inColumnStatistic = getExpressionStatistic(firstChild);
+
+            List<ScalarOperator> otherChildrenList = predicate.getChildren().stream().skip(1).toList();
+            otherChildrenList = otherChildrenList.stream().map(this::getChildForCastOperator).distinct().toList();
+            boolean allConstants = otherChildrenList.stream().allMatch(op -> op instanceof ConstantOperator);
+
+            if (!predicate.isSubquery() && firstChild.isColumnRef() && !inColumnStatistic.isUnknown() &&
+                    inColumnStatistic.getHistogram() != null && allConstants) {
+                return estimateInPredicateWithHistogram(
+                        (ColumnRefOperator) firstChild,
+                        inColumnStatistic,
+                        otherChildrenList.stream()
+                                .map(op -> (ConstantOperator) op)
+                                .collect(Collectors.toList()),
+                        predicate.isNotIn(),
+                        statistics
+                );
+            }
+
             List<ColumnStatistic> otherChildrenColumnStatisticList =
-                    otherChildrenList.stream().distinct().map(this::getExpressionStatistic).collect(Collectors.toList());
+                    otherChildrenList.stream().distinct().map(this::getExpressionStatistic).toList();
 
             // using ndv to estimate string col inPredicate
             if (!predicate.isNotIn() && firstChild.getType().getPrimitiveType().isCharFamily()
@@ -192,7 +252,7 @@ public class PredicateStatisticsCalculator {
             Statistics inStatistics = childOpt.map(operator ->
                             Statistics.buildFrom(statistics).setOutputRowCount(rowCount).
                                     addColumnStatistic(operator, newInColumnStatistic).build()).
-                    orElseGet(() -> Statistics.buildFrom(statistics).setOutputRowCount(rowCount).build());
+                    orElseGet(() -> statistics.withOutputRowCount(rowCount));
             return StatisticsEstimateUtils.adjustStatisticsByRowCount(inStatistics, rowCount);
         }
 
@@ -208,7 +268,7 @@ public class PredicateStatisticsCalculator {
                         1 - StatisticsEstimateCoefficient.IS_NULL_PREDICATE_DEFAULT_FILTER_COEFFICIENT :
                         StatisticsEstimateCoefficient.IS_NULL_PREDICATE_DEFAULT_FILTER_COEFFICIENT;
                 double rowCount = statistics.getOutputRowCount() * selectivity;
-                return Statistics.buildFrom(statistics).setOutputRowCount(rowCount).build();
+                return statistics.withOutputRowCount(rowCount);
             }
             ColumnStatistic isNullColumnStatistic = statistics.getColumnStatistic(children.get(0));
             if (isNullColumnStatistic.isUnknown()) {
@@ -245,6 +305,18 @@ public class PredicateStatisticsCalculator {
             // For CastOperator, we need use child as column statistics
             leftChild = getChildForCastOperator(leftChild);
             rightChild = getChildForCastOperator(rightChild);
+
+            // For SPM functions, we try to revert to origin scalar operator
+            // in actually, SPMFunction also support the correct statistics, but the implement of binary
+            // predicate depend on ConstantOperator, not ConstantExpression, it's take SPM's plan is
+            // different with origin plan.
+            if (SPMFunctions.isSPMFunctions(leftChild) && SPMFunctions.canRevert2ScalarOperator(leftChild)) {
+                leftChild = SPMFunctions.revertSPMFunctions(leftChild).get(0);
+            }
+            if (SPMFunctions.isSPMFunctions(rightChild) && SPMFunctions.canRevert2ScalarOperator(rightChild)) {
+                rightChild = SPMFunctions.revertSPMFunctions(rightChild).get(0);
+            }
+
             // compute left and right column statistics
             ColumnStatistic leftColumnStatistic = getExpressionStatistic(leftChild);
             ColumnStatistic rightColumnStatistic = getExpressionStatistic(rightChild);
@@ -265,13 +337,8 @@ public class PredicateStatisticsCalculator {
                 // only columnRefOperator could add column statistic to statistics
                 leftChildOpt = leftChild.isColumnRef() ? Optional.of((ColumnRefOperator) leftChild) : Optional.empty();
 
-                if (rightChild.isConstant()) {
-                    Optional<ConstantOperator> constantOperator;
-                    if (rightChild.isConstantRef()) {
-                        constantOperator = Optional.of((ConstantOperator) rightChild);
-                    } else {
-                        constantOperator = Optional.empty();
-                    }
+                if (rightChild.isConstantRef()) {
+                    Optional<ConstantOperator> constantOperator = Optional.of((ConstantOperator) rightChild);
                     Statistics binaryStats =
                             BinaryPredicateStatisticCalculator.estimateColumnToConstantComparison(leftChildOpt,
                                     leftColumnStatistic, predicate, constantOperator, statistics);
@@ -290,7 +357,7 @@ public class PredicateStatisticsCalculator {
                 double outputRowCount = statistics.getOutputRowCount() *
                         StatisticsEstimateCoefficient.CONSTANT_TO_CONSTANT_PREDICATE_COEFFICIENT;
                 return StatisticsEstimateUtils.adjustStatisticsByRowCount(
-                        Statistics.buildFrom(statistics).setOutputRowCount(outputRowCount).build(), outputRowCount);
+                        statistics.withOutputRowCount(outputRowCount), outputRowCount);
             }
         }
 
@@ -301,6 +368,13 @@ public class PredicateStatisticsCalculator {
             }
 
             if (predicate.isAnd()) {
+                Pair<Map<ColumnRefOperator, ConstantOperator>, List<ScalarOperator>> extracted =
+                        Utils.separateEqualityPredicates(predicate);
+
+                if (extracted.first.size() > 1) {
+                    return computeCompoundStatsWithMultiColumnOptimize(predicate, statistics);
+                }
+
                 Statistics leftStatistics = predicate.getChild(0).accept(this, null);
                 Statistics andStatistics =
                         predicate.getChild(1).accept(new BaseCalculatingVisitor(leftStatistics), null);
@@ -326,8 +400,7 @@ public class PredicateStatisticsCalculator {
             } else {
                 Statistics inputStatistics = predicate.getChild(0).accept(this, null);
                 double rowCount = Math.max(0, statistics.getOutputRowCount() - inputStatistics.getOutputRowCount());
-                return StatisticsEstimateUtils.adjustStatisticsByRowCount(
-                        Statistics.buildFrom(statistics).setOutputRowCount(rowCount).build(), rowCount);
+                return StatisticsEstimateUtils.adjustStatisticsByRowCount(statistics.withOutputRowCount(rowCount), rowCount);
             }
         }
 
@@ -354,8 +427,54 @@ public class PredicateStatisticsCalculator {
             if (constant.getBoolean()) {
                 return statistics;
             } else {
-                return Statistics.buildFrom(statistics).setOutputRowCount(0.0).build();
+                return statistics.withOutputRowCount(0.0);
             }
+        }
+
+        @Override
+        public Statistics visitCall(CallOperator call, Void context) {
+            if (call.getType() != BooleanType.BOOLEAN) {
+                return visit(call, context);
+            }
+
+            if (call.getFnName().equalsIgnoreCase(FunctionSet.IF)) {
+                return ifPredicate(call);
+            }
+
+            return visit(call, context);
+        }
+
+        // The statistics are computed by building the equivalent predicate using AND and OR, and computing its statistics.
+        // example:
+        //                       IF
+        //               /       |        \
+        //      condition   predicate1     predicate2
+        //
+        // equivalent predicate:
+        //                            OR
+        //                   /                   \
+        //                AND                     AND
+        //               /   \                   /   \
+        //      condition     predicate1       OR     predicate2
+        //                                    /  \
+        //                   condition IS NULL    NOT ( condition )
+        private Statistics ifPredicate(CallOperator predicate) {
+            List<ScalarOperator> children = predicate.getChildren();
+            ScalarOperator trueBranch = new CompoundPredicateOperator(CompoundPredicateOperator.CompoundType.AND,
+                    children.get(0), children.get(1));
+
+            ScalarOperator isNullCondition = new IsNullPredicateOperator(false, children.get(0));
+            ScalarOperator notCondition = new CompoundPredicateOperator(CompoundPredicateOperator.CompoundType.NOT,
+                    children.get(0));
+            ScalarOperator falseBranchCondition = new CompoundPredicateOperator(CompoundPredicateOperator.CompoundType.OR,
+                    isNullCondition, notCondition);
+            ScalarOperator falseBranch = new CompoundPredicateOperator(CompoundPredicateOperator.CompoundType.AND,
+                    falseBranchCondition, children.get(2));
+
+            CompoundPredicateOperator equivalentCompoundPredicate =
+                    new CompoundPredicateOperator(CompoundPredicateOperator.CompoundType.OR, trueBranch, falseBranch);
+
+            return equivalentCompoundPredicate.accept(this, null);
         }
 
         private ScalarOperator getChildForCastOperator(ScalarOperator operator) {
@@ -382,6 +501,13 @@ public class PredicateStatisticsCalculator {
             }
 
             if (predicate.isAnd()) {
+                Pair<Map<ColumnRefOperator, ConstantOperator>, List<ScalarOperator>> extracted =
+                        Utils.separateEqualityPredicates(predicate);
+
+                if (extracted.first.size() > 1) {
+                    return computeCompoundStatsWithMultiColumnOptimize(predicate, statistics);
+                }
+
                 Statistics leftStatistics = predicate.getChild(0).accept(this, null);
                 Statistics andStatistics = predicate.getChild(1)
                         .accept(new LargeOrCalculatingVisitor(leftStatistics), null);
@@ -405,8 +531,7 @@ public class PredicateStatisticsCalculator {
             } else {
                 Statistics inputStatistics = predicate.getChild(0).accept(this, null);
                 double rowCount = Math.max(0, statistics.getOutputRowCount() - inputStatistics.getOutputRowCount());
-                return StatisticsEstimateUtils.adjustStatisticsByRowCount(
-                        Statistics.buildFrom(statistics).setOutputRowCount(rowCount).build(), rowCount);
+                return StatisticsEstimateUtils.adjustStatisticsByRowCount(statistics.withOutputRowCount(rowCount), rowCount);
             }
         }
 
@@ -432,5 +557,6 @@ public class PredicateStatisticsCalculator {
             });
             return builder.build();
         }
+
     }
 }
