@@ -34,51 +34,71 @@
 
 package com.starrocks.load.routineload;
 
-import com.google.common.base.Joiner;
 import com.google.common.base.Strings;
 import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.Lists;
 import com.google.common.collect.Maps;
 import com.starrocks.catalog.Database;
-import com.starrocks.catalog.Table;
+import com.starrocks.catalog.OlapTable;
+import com.starrocks.catalog.PartitionNames;
 import com.starrocks.common.InternalErrorCode;
-import com.starrocks.common.UserException;
+import com.starrocks.common.StarRocksException;
 import com.starrocks.common.jmockit.Deencapsulation;
 import com.starrocks.common.util.KafkaUtil;
+import com.starrocks.common.util.UUIDUtil;
 import com.starrocks.load.RoutineLoadDesc;
 import com.starrocks.metric.TableMetricsEntity;
 import com.starrocks.metric.TableMetricsRegistry;
 import com.starrocks.persist.EditLog;
+import com.starrocks.persist.OriginStatementInfo;
 import com.starrocks.persist.RoutineLoadOperation;
 import com.starrocks.qe.ConnectContext;
-import com.starrocks.qe.OriginStatement;
 import com.starrocks.server.GlobalStateMgr;
 import com.starrocks.server.RunMode;
-import com.starrocks.server.WarehouseManager;
 import com.starrocks.sql.ast.AlterRoutineLoadStmt;
+import com.starrocks.sql.ast.ColumnSeparator;
 import com.starrocks.sql.ast.CreateRoutineLoadStmt;
+import com.starrocks.sql.ast.ImportColumnDesc;
+import com.starrocks.sql.ast.RowDelimiter;
+import com.starrocks.sql.ast.expression.BinaryPredicate;
+import com.starrocks.sql.ast.expression.BinaryType;
+import com.starrocks.sql.ast.expression.IntLiteral;
+import com.starrocks.sql.ast.expression.SlotRef;
 import com.starrocks.thrift.TKafkaRLTaskProgress;
+import com.starrocks.thrift.TRoutineLoadJobInfo;
 import com.starrocks.transaction.TransactionState;
 import com.starrocks.utframe.UtFrameUtils;
-import com.starrocks.warehouse.DefaultWarehouse;
+import com.starrocks.warehouse.cngroup.ComputeResource;
 import mockit.Expectations;
 import mockit.Injectable;
 import mockit.Mock;
 import mockit.MockUp;
 import mockit.Mocked;
-import org.junit.Assert;
-import org.junit.Test;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 
 import java.util.List;
 import java.util.Map;
-import java.util.UUID;
 
 public class RoutineLoadJobTest {
+
+    @BeforeEach
+    public void setUp() throws Exception {
+        // Initialize test environment
+        UtFrameUtils.setUpForPersistTest();
+    }
+
+    @AfterEach
+    public void tearDown() {
+        UtFrameUtils.tearDownForPersisTest();
+    }
+
     @Test
-    public void testAfterAbortedReasonOffsetOutOfRange(@Mocked GlobalStateMgr globalStateMgr,
-                                                       @Injectable TransactionState transactionState,
+    public void testAfterAbortedReasonOffsetOutOfRange(@Injectable TransactionState transactionState,
                                                        @Injectable RoutineLoadTaskInfo routineLoadTaskInfo)
-            throws UserException {
+            throws StarRocksException {
 
         List<RoutineLoadTaskInfo> routineLoadTaskInfoList = Lists.newArrayList();
         routineLoadTaskInfoList.add(routineLoadTaskInfo);
@@ -101,18 +121,18 @@ public class RoutineLoadJobTest {
             }
         };
 
-        String txnStatusChangeReasonString = TransactionState.TxnStatusChangeReason.OFFSET_OUT_OF_RANGE.toString();
+        String txnStatusChangeReasonString = TxnStatusChangeReason.OFFSET_OUT_OF_RANGE.toString();
         RoutineLoadJob routineLoadJob = new KafkaRoutineLoadJob();
         Deencapsulation.setField(routineLoadJob, "routineLoadTaskInfoList", routineLoadTaskInfoList);
         routineLoadJob.afterAborted(transactionState, true, txnStatusChangeReasonString);
 
-        Assert.assertEquals(RoutineLoadJob.JobState.PAUSED, routineLoadJob.getState());
+        Assertions.assertEquals(RoutineLoadJob.JobState.PAUSED, routineLoadJob.getState());
     }
 
     @Test
     public void testAfterAborted(@Mocked RoutineLoadMgr routineLoadMgr,
                                  @Injectable TransactionState transactionState,
-                                 @Injectable KafkaTaskInfo routineLoadTaskInfo) throws UserException {
+                                 @Injectable KafkaTaskInfo routineLoadTaskInfo) throws StarRocksException {
         Deencapsulation.setField(routineLoadTaskInfo, "routineLoadManager", routineLoadMgr);
         List<RoutineLoadTaskInfo> routineLoadTaskInfoList = Lists.newArrayList();
         routineLoadTaskInfoList.add(routineLoadTaskInfo);
@@ -144,7 +164,7 @@ public class RoutineLoadJobTest {
                 result = Lists.newArrayList();
                 routineLoadTaskInfo.getId();
                 minTimes = 0;
-                result = UUID.randomUUID();
+                result = UUIDUtil.genUUID();
                 routineLoadMgr.getJob(anyLong);
                 minTimes = 0;
                 result = routineLoadJob;
@@ -166,22 +186,22 @@ public class RoutineLoadJobTest {
         long prevValue = entity.counterRoutineLoadAbortedTasksTotal.getValue();
         routineLoadJob.afterAborted(transactionState, true, txnStatusChangeReasonString);
 
-        Assert.assertEquals(RoutineLoadJob.JobState.RUNNING, routineLoadJob.getState());
-        Assert.assertEquals(new Long(1), Deencapsulation.getField(routineLoadJob, "abortedTaskNum"));
-        Assert.assertTrue(routineLoadJob.getOtherMsg(), routineLoadJob.getOtherMsg().endsWith(txnStatusChangeReasonString));
+        Assertions.assertEquals(RoutineLoadJob.JobState.RUNNING, routineLoadJob.getState());
+        Assertions.assertEquals(Long.valueOf(1), Deencapsulation.getField(routineLoadJob, "abortedTaskNum"));
+        Assertions.assertTrue(routineLoadJob.getOtherMsg().endsWith(txnStatusChangeReasonString), routineLoadJob.getOtherMsg());
 
-        Assert.assertEquals(new Long(prevValue + 1), entity.counterRoutineLoadAbortedTasksTotal.getValue());
+        Assertions.assertEquals(Long.valueOf(prevValue + 1), entity.counterRoutineLoadAbortedTasksTotal.getValue());
 
         routineLoadTaskInfoList.clear();
         routineLoadJob.afterAborted(transactionState, true, txnStatusChangeReasonString);
-        Assert.assertEquals(new Long(2), Deencapsulation.getField(routineLoadJob, "abortedTaskNum"));
-        Assert.assertEquals(new Long(prevValue + 2), entity.counterRoutineLoadAbortedTasksTotal.getValue());
+        Assertions.assertEquals(Long.valueOf(2), Deencapsulation.getField(routineLoadJob, "abortedTaskNum"));
+        Assertions.assertEquals(Long.valueOf(prevValue + 2), entity.counterRoutineLoadAbortedTasksTotal.getValue());
     }
 
     @Test
     public void testAfterCommitted(@Mocked RoutineLoadMgr routineLoadMgr,
-                                 @Injectable TransactionState transactionState,
-                                 @Injectable KafkaTaskInfo routineLoadTaskInfo) throws UserException {
+                                   @Injectable TransactionState transactionState,
+                                   @Injectable KafkaTaskInfo routineLoadTaskInfo) throws StarRocksException {
         Deencapsulation.setField(routineLoadTaskInfo, "routineLoadManager", routineLoadMgr);
         List<RoutineLoadTaskInfo> routineLoadTaskInfoList = Lists.newArrayList();
         routineLoadTaskInfoList.add(routineLoadTaskInfo);
@@ -213,7 +233,7 @@ public class RoutineLoadJobTest {
                 result = Lists.newArrayList();
                 routineLoadTaskInfo.getId();
                 minTimes = 0;
-                result = UUID.randomUUID();
+                result = UUIDUtil.genUUID();
                 routineLoadMgr.getJob(anyLong);
                 minTimes = 0;
                 result = routineLoadJob;
@@ -234,25 +254,64 @@ public class RoutineLoadJobTest {
         long prevValue = entity.counterRoutineLoadCommittedTasksTotal.getValue();
         routineLoadJob.afterCommitted(transactionState, true);
 
-        Assert.assertEquals(RoutineLoadJob.JobState.RUNNING, routineLoadJob.getState());
-        Assert.assertEquals(new Long(1), Deencapsulation.getField(routineLoadJob, "committedTaskNum"));
+        Assertions.assertEquals(RoutineLoadJob.JobState.RUNNING, routineLoadJob.getState());
+        Assertions.assertEquals(Long.valueOf(1), Deencapsulation.getField(routineLoadJob, "committedTaskNum"));
 
-        Assert.assertEquals(new Long(prevValue + 1), entity.counterRoutineLoadCommittedTasksTotal.getValue());
+        Assertions.assertEquals(Long.valueOf(prevValue + 1), entity.counterRoutineLoadCommittedTasksTotal.getValue());
     }
 
     @Test
-    public void testGetShowInfo() throws UserException {
+    public void testPulsarGetShowInfo() {
+        {
+            // PAUSE state
+            PulsarRoutineLoadJob routineLoadJob = new PulsarRoutineLoadJob();
+            Deencapsulation.setField(routineLoadJob, "state", RoutineLoadJob.JobState.PAUSED);
+            ErrorReason errorReason = new ErrorReason(InternalErrorCode.INTERNAL_ERR,
+                    TxnStatusChangeReason.OFFSET_OUT_OF_RANGE.toString());
+            Deencapsulation.setField(routineLoadJob, "pauseReason", errorReason);
+
+            List<String> showInfo = routineLoadJob.getShowInfo();
+            Assertions.assertTrue(showInfo.stream().filter(entity -> !Strings.isNullOrEmpty(entity))
+                    .anyMatch(entity -> entity.equals(errorReason.toString())));
+
+            TRoutineLoadJobInfo loadJobInfo = routineLoadJob.toThrift();
+            Assertions.assertTrue(loadJobInfo.getReasons_of_state_changed().equals(errorReason.toString()));
+        }
+
+        {
+            // PAUSE state
+            PulsarRoutineLoadJob routineLoadJob = new PulsarRoutineLoadJob(
+                    1L, "task1", 1, 1, "http://url", "task-1", "sub-1");
+            Deencapsulation.setField(routineLoadJob, "state", RoutineLoadJob.JobState.PAUSED);
+            ErrorReason errorReason = new ErrorReason(InternalErrorCode.INTERNAL_ERR,
+                    TxnStatusChangeReason.OFFSET_OUT_OF_RANGE.toString());
+            Deencapsulation.setField(routineLoadJob, "pauseReason", errorReason);
+
+            List<String> showInfo = routineLoadJob.getShowInfo();
+            Assertions.assertTrue(showInfo.stream().filter(entity -> !Strings.isNullOrEmpty(entity))
+                    .anyMatch(entity -> entity.equals(errorReason.toString())));
+
+            TRoutineLoadJobInfo loadJobInfo = routineLoadJob.toThrift();
+            Assertions.assertTrue(loadJobInfo.getReasons_of_state_changed().equals(errorReason.toString()));
+        }
+    }
+
+    @Test
+    public void testKafkaGetShowInfo() throws StarRocksException {
         {
             // PAUSE state
             KafkaRoutineLoadJob routineLoadJob = new KafkaRoutineLoadJob();
             Deencapsulation.setField(routineLoadJob, "state", RoutineLoadJob.JobState.PAUSED);
             ErrorReason errorReason = new ErrorReason(InternalErrorCode.INTERNAL_ERR,
-                    TransactionState.TxnStatusChangeReason.OFFSET_OUT_OF_RANGE.toString());
+                    TxnStatusChangeReason.OFFSET_OUT_OF_RANGE.toString());
             Deencapsulation.setField(routineLoadJob, "pauseReason", errorReason);
 
             List<String> showInfo = routineLoadJob.getShowInfo();
-            Assert.assertEquals(true, showInfo.stream().filter(entity -> !Strings.isNullOrEmpty(entity))
+            Assertions.assertEquals(true, showInfo.stream().filter(entity -> !Strings.isNullOrEmpty(entity))
                     .anyMatch(entity -> entity.equals(errorReason.toString())));
+
+            TRoutineLoadJobInfo loadJobInfo = routineLoadJob.toThrift();
+            Assertions.assertTrue(loadJobInfo.getReasons_of_state_changed().equals(errorReason.toString()));
         }
 
         {
@@ -268,14 +327,21 @@ public class RoutineLoadJobTest {
             partitionOffsetTimestamps.put(Integer.valueOf(0), Long.valueOf(1701411708410L));
             KafkaProgress kafkaTimestampProgress = new KafkaProgress(partitionOffsetTimestamps);
             Deencapsulation.setField(routineLoadJob, "timestampProgress", kafkaTimestampProgress);
-
+            ((Map<String, String>) Deencapsulation.getField(routineLoadJob, "jobProperties"))
+                    .put("pause_on_fatal_parse_error", "true");
             routineLoadJob.setPartitionOffset(0, 12345);
 
             List<String> showInfo = routineLoadJob.getShowInfo();
-            Assert.assertEquals("{\"0\":\"12345\"}", showInfo.get(20));
+            Assertions.assertEquals("{\"0\":\"12345\"}", showInfo.get(20));
             //The displayed value is the actual value - 1
-            Assert.assertEquals("{\"0\":\"1233\"}", showInfo.get(14));
-            Assert.assertEquals("{\"0\":\"1701411708409\"}", showInfo.get(15));
+            Assertions.assertEquals("{\"0\":\"1233\"}", showInfo.get(14));
+            Assertions.assertEquals("{\"0\":\"1701411708409\"}", showInfo.get(15));
+            Assertions.assertTrue(showInfo.get(10).contains("\"pause_on_fatal_parse_error\":\"true\""));
+
+            TRoutineLoadJobInfo loadJobInfo = routineLoadJob.toThrift();
+            Assertions.assertEquals("{\"0\":\"12345\"}", loadJobInfo.getLatest_source_position());
+            //The displayed value is the actual value - 1
+            Assertions.assertEquals("{\"0\":\"1233\"}", loadJobInfo.getProgress());
         }
 
         {
@@ -286,16 +352,23 @@ public class RoutineLoadJobTest {
             partitionOffsetTimestamps.put(Integer.valueOf(0), Long.valueOf(1701411708410L));
             KafkaProgress kafkaTimestampProgress = new KafkaProgress(partitionOffsetTimestamps);
             Deencapsulation.setField(routineLoadJob, "timestampProgress", kafkaTimestampProgress);
+            ((Map<String, String>) Deencapsulation.getField(routineLoadJob, "jobProperties"))
+                    .put("pause_on_fatal_parse_error", "false");
 
-            routineLoadJob.updateState(RoutineLoadJob.JobState.RUNNING, null, false);
+            routineLoadJob.updateState(RoutineLoadJob.JobState.RUNNING, null);
             // The job is set unstable due to the progress is too slow.
             routineLoadJob.updateSubstate();
+            Assertions.assertTrue(routineLoadJob.isUnstable());
 
             List<String> showInfo = routineLoadJob.getShowInfo();
-            Assert.assertEquals("UNSTABLE", showInfo.get(7));
+            Assertions.assertEquals("UNSTABLE", showInfo.get(7));
             // The lag [xxx] of partition [0] exceeds Config.routine_load_unstable_threshold_second [3600]
-            Assert.assertTrue(showInfo.get(16).contains(
+            Assertions.assertTrue(showInfo.get(16).contains(
                     "partition [0] exceeds Config.routine_load_unstable_threshold_second [3600]"));
+
+            TRoutineLoadJobInfo loadJobInfo = routineLoadJob.toThrift();
+            Assertions.assertEquals("RUNNING", loadJobInfo.getState());
+            Assertions.assertEquals("", loadJobInfo.getReasons_of_state_changed());
 
             partitionOffsetTimestamps.put(Integer.valueOf(0), Long.valueOf(System.currentTimeMillis()));
             kafkaTimestampProgress = new KafkaProgress(partitionOffsetTimestamps);
@@ -303,106 +376,81 @@ public class RoutineLoadJobTest {
             // The job is set stable due to the progress is kept up.
             routineLoadJob.updateSubstate();
             showInfo = routineLoadJob.getShowInfo();
-            Assert.assertEquals("RUNNING", showInfo.get(7));
-            Assert.assertEquals("", showInfo.get(16));
+            Assertions.assertEquals("RUNNING", showInfo.get(7));
+            Assertions.assertEquals("", showInfo.get(16));
+
+            loadJobInfo = routineLoadJob.toThrift();
+            Assertions.assertEquals("RUNNING", loadJobInfo.getState());
+            Assertions.assertEquals("", loadJobInfo.getReasons_of_state_changed());
 
             // The job is set stable.
             routineLoadJob.updateSubstateStable();
             showInfo = routineLoadJob.getShowInfo();
-            Assert.assertEquals("RUNNING", showInfo.get(7));
-            Assert.assertEquals("", showInfo.get(16));
+            Assertions.assertEquals("RUNNING", showInfo.get(7));
+            Assertions.assertEquals("", showInfo.get(16));
+            Assertions.assertTrue(showInfo.get(10).contains("\"pause_on_fatal_parse_error\":\"false\""));
+
+            loadJobInfo = routineLoadJob.toThrift();
+            Assertions.assertEquals("RUNNING", loadJobInfo.getState());
+            Assertions.assertEquals("", loadJobInfo.getReasons_of_state_changed());
         }
     }
 
     @Test
-    public void testGetShowInfoSharedData(@Mocked GlobalStateMgr globalStateMgr,
-                                          @Mocked WarehouseManager warehouseManager) throws UserException {
+    public void testGetShowInfoSharedData() {
         new MockUp<RunMode>() {
             @Mock
             public RunMode getCurrentRunMode() {
                 return RunMode.SHARED_DATA;
             }
         };
-
-        new Expectations() {
-            {
-                globalStateMgr.getWarehouseMgr();
-                result = warehouseManager;
-                warehouseManager.getWarehouse(0L);
-                result = new DefaultWarehouse(0, "default_warehouse");
-                warehouseManager.getWarehouse(1L);
-                result = new Exception("Warehouse id: 1 not exist");
-            }
-        };
+        GlobalStateMgr.getCurrentState().getWarehouseMgr().initDefaultWarehouse();
 
         KafkaRoutineLoadJob routineLoadJob = new KafkaRoutineLoadJob();
         routineLoadJob.setWarehouseId(0L);
         List<String> showInfo = routineLoadJob.getShowInfo();
-        Assert.assertEquals(22, showInfo.size());
-        Assert.assertEquals("default_warehouse", showInfo.get(20));
+        Assertions.assertEquals(23, showInfo.size());
+        Assertions.assertEquals("default_warehouse", showInfo.get(20));
 
         routineLoadJob.setWarehouseId(1L);
         showInfo = routineLoadJob.getShowInfo();
-        Assert.assertEquals("Warehouse id: 1 not exist", showInfo.get(20));
+        Assertions.assertEquals("Warehouse id: 1 not exist.", showInfo.get(20));
     }
 
     @Test
-    public void testUpdateWhileDbDeleted(@Mocked GlobalStateMgr globalStateMgr) throws UserException {
-        new Expectations() {
-            {
-                globalStateMgr.getDb(anyLong);
-                minTimes = 0;
-                result = null;
-            }
-        };
-
+    public void testUpdateWhileDbDeleted() throws StarRocksException {
         RoutineLoadJob routineLoadJob = new KafkaRoutineLoadJob();
         routineLoadJob.update();
 
-        Assert.assertEquals(RoutineLoadJob.JobState.CANCELLED, routineLoadJob.getState());
+        Assertions.assertEquals(RoutineLoadJob.JobState.CANCELLED, routineLoadJob.getState());
     }
 
     @Test
-    public void testUpdateWhileTableDeleted(@Mocked GlobalStateMgr globalStateMgr,
-                                            @Injectable Database database) throws UserException {
-        new Expectations() {
-            {
-                globalStateMgr.getDb(anyLong);
-                minTimes = 0;
-                result = database;
-                database.getTable(anyLong);
-                minTimes = 0;
-                result = null;
-            }
-        };
-        RoutineLoadJob routineLoadJob = new KafkaRoutineLoadJob();
+    public void testUpdateWhileTableDeleted() throws StarRocksException {
+        long dbId = 11L;
+        Database database = new Database(dbId, "testDb");
+        GlobalStateMgr.getCurrentState().getLocalMetastore().replayCreateDb(database);
+        RoutineLoadJob routineLoadJob = new KafkaRoutineLoadJob(
+                1L, "test", dbId, 111L, "brokerList", "topic");
         routineLoadJob.update();
 
-        Assert.assertEquals(RoutineLoadJob.JobState.CANCELLED, routineLoadJob.getState());
+        Assertions.assertEquals(RoutineLoadJob.JobState.CANCELLED, routineLoadJob.getState());
     }
 
     @Test
-    public void testUpdateWhilePartitionChanged(@Mocked GlobalStateMgr globalStateMgr,
-                                                @Injectable Database database,
-                                                @Injectable Table table,
-                                                @Injectable KafkaProgress kafkaProgress) throws UserException {
+    public void testUpdateWhilePartitionChanged(@Injectable KafkaProgress kafkaProgress) throws StarRocksException {
 
-        new Expectations() {
-            {
-                globalStateMgr.getDb(anyLong);
-                minTimes = 0;
-                result = database;
-                database.getTable(anyLong);
-                minTimes = 0;
-                result = table;
-            }
-        };
+        long dbId = 11L;
+        Database database = new Database(dbId, "testDb");
+        OlapTable table = new OlapTable(22L, "test", null, null, null, null);
+        database.registerTableUnlocked(table);
+        GlobalStateMgr.getCurrentState().getLocalMetastore().replayCreateDb(database);
 
         new MockUp<KafkaUtil>() {
             @Mock
             public List<Integer> getAllKafkaPartitions(String brokerList, String topic,
                                                        ImmutableMap<String, String> properties,
-                                                       long warehouseId) throws UserException {
+                                                       ComputeResource computeResource) throws StarRocksException {
                 return Lists.newArrayList(1, 2, 3);
             }
         };
@@ -414,25 +462,25 @@ public class RoutineLoadJobTest {
             }
         };
 
-        RoutineLoadJob routineLoadJob = new KafkaRoutineLoadJob();
+        RoutineLoadJob routineLoadJob = new KafkaRoutineLoadJob(111L, "test", dbId, 22L, "brokerList", "topic");
         Deencapsulation.setField(routineLoadJob, "state", RoutineLoadJob.JobState.RUNNING);
         Deencapsulation.setField(routineLoadJob, "progress", kafkaProgress);
         routineLoadJob.update();
 
-        Assert.assertEquals(RoutineLoadJob.JobState.NEED_SCHEDULE, routineLoadJob.getState());
+        Assertions.assertEquals(RoutineLoadJob.JobState.NEED_SCHEDULE, routineLoadJob.getState());
     }
 
     @Test
-    public void testUpdateNumOfDataErrorRowMoreThanMax(@Mocked GlobalStateMgr globalStateMgr) {
+    public void testUpdateNumOfDataErrorRowMoreThanMax() {
         RoutineLoadJob routineLoadJob = new KafkaRoutineLoadJob();
         Deencapsulation.setField(routineLoadJob, "maxErrorNum", 0);
         Deencapsulation.setField(routineLoadJob, "maxBatchRows", 0);
         Deencapsulation.invoke(routineLoadJob, "updateNumOfData", 1L, 1L, 0L, 1L, 1L, false);
 
-        Assert.assertEquals(RoutineLoadJob.JobState.PAUSED, routineLoadJob.getState());
+        Assertions.assertEquals(RoutineLoadJob.JobState.PAUSED, routineLoadJob.getState());
         ErrorReason reason = routineLoadJob.pauseReason;
-        Assert.assertEquals(InternalErrorCode.TOO_MANY_FAILURE_ROWS_ERR, reason.getCode());
-        Assert.assertEquals(
+        Assertions.assertEquals(InternalErrorCode.TOO_MANY_FAILURE_ROWS_ERR, reason.getCode());
+        Assertions.assertEquals(
                 "Current error rows: 1 is more than max error num: 0. Check the 'TrackingSQL' field for detailed information. " +
                         "If you are sure that the data has many errors, you can set 'max_error_number' property " +
                         "to a greater value through ALTER ROUTINE LOAD and RESUME the job",
@@ -442,7 +490,7 @@ public class RoutineLoadJobTest {
     @Test
     public void testPartialUpdateMode(@Mocked GlobalStateMgr globalStateMgr) {
         RoutineLoadJob routineLoadJob = new KafkaRoutineLoadJob();
-        Assert.assertEquals(routineLoadJob.getPartialUpdateMode(), "row");
+        Assertions.assertEquals(routineLoadJob.getPartialUpdateMode(), "row");
     }
 
     @Test
@@ -455,9 +503,9 @@ public class RoutineLoadJobTest {
         Deencapsulation.setField(routineLoadJob, "currentTotalRows", 99);
         Deencapsulation.invoke(routineLoadJob, "updateNumOfData", 2L, 0L, 0L, 1L, 1L, false);
 
-        Assert.assertEquals(RoutineLoadJob.JobState.RUNNING, Deencapsulation.getField(routineLoadJob, "state"));
-        Assert.assertEquals(new Long(0), Deencapsulation.getField(routineLoadJob, "currentErrorRows"));
-        Assert.assertEquals(new Long(0), Deencapsulation.getField(routineLoadJob, "currentTotalRows"));
+        Assertions.assertEquals(RoutineLoadJob.JobState.RUNNING, Deencapsulation.getField(routineLoadJob, "state"));
+        Assertions.assertEquals(Long.valueOf(0), Deencapsulation.getField(routineLoadJob, "currentErrorRows"));
+        Assertions.assertEquals(Long.valueOf(0), Deencapsulation.getField(routineLoadJob, "currentTotalRows"));
 
     }
 
@@ -478,6 +526,7 @@ public class RoutineLoadJobTest {
         String jsonRoot = "$.RECORDS";
         String taskTimeout = "20";
         String taskConsumeTime = "3";
+        String pauseOnFatalParseError = "false";
         String originStmt = "alter routine load for db.job1 " +
                 "properties (" +
                 "   \"desired_concurrent_number\" = \"" + desiredConcurrentNumber + "\"," +
@@ -488,6 +537,7 @@ public class RoutineLoadJobTest {
                 "   \"task_consume_second\" = \"" + taskConsumeTime + "\"," +
                 "   \"task_timeout_second\" = \"" + taskTimeout + "\"," +
                 "   \"strict_mode\" = \"" + strictMode + "\"," +
+                "   \"pause_on_fatal_parse_error\" = \"" + pauseOnFatalParseError + "\"," +
                 "   \"timezone\" = \"" + timeZone + "\"," +
                 "   \"jsonpaths\" = \"" + jsonPaths + "\"," +
                 "   \"strip_outer_array\" = \"" + stripOuterArray + "\"," +
@@ -498,27 +548,28 @@ public class RoutineLoadJobTest {
             System.out.println("Key: " + key);
             System.out.println("Value: " + stmt.getAnalyzedJobProperties().get(key));
         }
-        routineLoadJob.modifyJob(stmt.getRoutineLoadDesc(), stmt.getAnalyzedJobProperties(),
-                stmt.getDataSourceProperties(), new OriginStatement(originStmt, 0), true);
-        Assert.assertEquals(Integer.parseInt(desiredConcurrentNumber),
+        routineLoadJob.replayModifyJob(stmt.getRoutineLoadDesc(), stmt.getAnalyzedJobProperties(),
+                stmt.getDataSourceProperties());
+        Assertions.assertEquals(Integer.parseInt(desiredConcurrentNumber),
                 (int) Deencapsulation.getField(routineLoadJob, "desireTaskConcurrentNum"));
-        Assert.assertEquals(Long.parseLong(maxBatchInterval),
+        Assertions.assertEquals(Long.parseLong(maxBatchInterval),
                 (long) Deencapsulation.getField(routineLoadJob, "taskSchedIntervalS"));
-        Assert.assertEquals(Long.parseLong(maxErrorNumber),
+        Assertions.assertEquals(Long.parseLong(maxErrorNumber),
                 (long) Deencapsulation.getField(routineLoadJob, "maxErrorNum"));
-        Assert.assertEquals(Double.parseDouble(maxFilterRatio),
+        Assertions.assertEquals(Double.parseDouble(maxFilterRatio),
                 (double) Deencapsulation.getField(routineLoadJob, "maxFilterRatio"), 0.01);
-        Assert.assertEquals(Long.parseLong(taskTimeout),
+        Assertions.assertEquals(Long.parseLong(taskTimeout),
                 (long) Deencapsulation.getField(routineLoadJob, "taskTimeoutSecond"));
-        Assert.assertEquals(Long.parseLong(taskConsumeTime),
+        Assertions.assertEquals(Long.parseLong(taskConsumeTime),
                 (long) Deencapsulation.getField(routineLoadJob, "taskConsumeSecond"));
-        Assert.assertEquals(Long.parseLong(maxBatchRows),
+        Assertions.assertEquals(Long.parseLong(maxBatchRows),
                 (long) Deencapsulation.getField(routineLoadJob, "maxBatchRows"));
-        Assert.assertEquals(Boolean.parseBoolean(strictMode), routineLoadJob.isStrictMode());
-        Assert.assertEquals(timeZone, routineLoadJob.getTimezone());
-        Assert.assertEquals(jsonPaths.replace("\\", ""), routineLoadJob.getJsonPaths());
-        Assert.assertEquals(Boolean.parseBoolean(stripOuterArray), routineLoadJob.isStripOuterArray());
-        Assert.assertEquals(jsonRoot, routineLoadJob.getJsonRoot());
+        Assertions.assertEquals(Boolean.parseBoolean(strictMode), routineLoadJob.isStrictMode());
+        Assertions.assertEquals(timeZone, routineLoadJob.getTimezone());
+        Assertions.assertEquals(jsonPaths.replace("\\", ""), routineLoadJob.getJsonPaths());
+        Assertions.assertEquals(Boolean.parseBoolean(stripOuterArray), routineLoadJob.isStripOuterArray());
+        Assertions.assertEquals(jsonRoot, routineLoadJob.getJsonRoot());
+        Assertions.assertEquals(Boolean.parseBoolean(pauseOnFatalParseError), routineLoadJob.isPauseOnFatalParseError());
     }
 
     @Test
@@ -535,15 +586,15 @@ public class RoutineLoadJobTest {
                 "   \"property.client.id\" = \"" + clientId + "\"," +
                 "   \"property.kafka_default_offsets\" = \"" + defaultOffsets + "\"" +
                 ")";
-        routineLoadJob.setOrigStmt(new OriginStatement(originStmt, 0));
+        routineLoadJob.setOrigStmt(new OriginStatementInfo(originStmt, 0));
         AlterRoutineLoadStmt stmt = (AlterRoutineLoadStmt) UtFrameUtils.parseStmtWithNewParser(originStmt, connectContext);
-        routineLoadJob.modifyJob(stmt.getRoutineLoadDesc(), stmt.getAnalyzedJobProperties(),
-                stmt.getDataSourceProperties(), new OriginStatement(originStmt, 0), true);
+        routineLoadJob.replayModifyJob(stmt.getRoutineLoadDesc(), stmt.getAnalyzedJobProperties(),
+                stmt.getDataSourceProperties());
         routineLoadJob.convertCustomProperties(true);
         Map<String, String> properties = routineLoadJob.getConvertedCustomProperties();
-        Assert.assertEquals(groupId, properties.get("group.id"));
-        Assert.assertEquals(clientId, properties.get("client.id"));
-        Assert.assertEquals(-2L,
+        Assertions.assertEquals(groupId, properties.get("group.id"));
+        Assertions.assertEquals(clientId, properties.get("client.id"));
+        Assertions.assertEquals(-2L,
                 (long) Deencapsulation.getField(routineLoadJob, "kafkaDefaultOffSet"));
     }
 
@@ -558,15 +609,85 @@ public class RoutineLoadJobTest {
                 "COLUMNS TERMINATED BY \",\"," +
                 "PARTITION(p1, p2, p3)," +
                 "ROWS TERMINATED BY \"A\"";
-        routineLoadJob.setOrigStmt(new OriginStatement(originStmt, 0));
+        routineLoadJob.setOrigStmt(new OriginStatementInfo(originStmt, 0));
         AlterRoutineLoadStmt stmt = (AlterRoutineLoadStmt) UtFrameUtils.parseStmtWithNewParser(originStmt, connectContext);
-        routineLoadJob.modifyJob(stmt.getRoutineLoadDesc(), stmt.getAnalyzedJobProperties(),
-                stmt.getDataSourceProperties(), new OriginStatement(originStmt, 0), true);
-        Assert.assertEquals("a,b,c,d=a", Joiner.on(",").join(routineLoadJob.getColumnDescs()));
-        Assert.assertEquals("`a` = 1", routineLoadJob.getWhereExpr().toSql());
-        Assert.assertEquals("','", routineLoadJob.getColumnSeparator().toString());
-        Assert.assertEquals("'A'", routineLoadJob.getRowDelimiter().toString());
-        Assert.assertEquals("p1,p2,p3", Joiner.on(",").join(routineLoadJob.getPartitions().getPartitionNames()));
+        routineLoadJob.replayModifyJob(stmt.getRoutineLoadDesc(), stmt.getAnalyzedJobProperties(),
+                stmt.getDataSourceProperties());
+
+        List<ImportColumnDesc> columnDescs = routineLoadJob.getColumnDescs();
+        Assertions.assertNotNull(columnDescs);
+        Assertions.assertEquals(4, columnDescs.size());
+        Assertions.assertEquals("a", columnDescs.get(0).getColumnName());
+        Assertions.assertEquals("b", columnDescs.get(1).getColumnName());
+        Assertions.assertEquals("c", columnDescs.get(2).getColumnName());
+        ImportColumnDesc expressionColumn = columnDescs.get(3);
+        Assertions.assertEquals("d", expressionColumn.getColumnName());
+        Assertions.assertTrue(expressionColumn.getExpr() instanceof SlotRef);
+        SlotRef expressionSlotRef = (SlotRef) expressionColumn.getExpr();
+        Assertions.assertEquals("a", expressionSlotRef.getColumnName());
+
+        Assertions.assertTrue(routineLoadJob.getWhereExpr() instanceof BinaryPredicate);
+        BinaryPredicate predicate = (BinaryPredicate) routineLoadJob.getWhereExpr();
+        Assertions.assertEquals(BinaryType.EQ, predicate.getOp());
+        Assertions.assertTrue(predicate.getChild(0) instanceof SlotRef);
+        SlotRef leftSlotRef = (SlotRef) predicate.getChild(0);
+        Assertions.assertEquals("a", leftSlotRef.getColumnName());
+        Assertions.assertTrue(predicate.getChild(1) instanceof IntLiteral);
+        IntLiteral rightLiteral = (IntLiteral) predicate.getChild(1);
+        Assertions.assertEquals(1L, rightLiteral.getLongValue());
+
+        ColumnSeparator columnSeparator = routineLoadJob.getColumnSeparator();
+        Assertions.assertEquals(",", columnSeparator.getOriSeparator());
+        RowDelimiter rowDelimiter = routineLoadJob.getRowDelimiter();
+        Assertions.assertEquals("A", rowDelimiter.getOriDelimiter());
+
+        PartitionNames partitions = routineLoadJob.getPartitions();
+        Assertions.assertNotNull(partitions);
+        Assertions.assertEquals(Lists.newArrayList("p1", "p2", "p3"), partitions.getPartitionNames());
+    }
+
+    @Test
+    public void testKafkaRoutineLoadJobValidBrokerList() throws Exception {
+        KafkaRoutineLoadJob routineLoadJob = new KafkaRoutineLoadJob(1L, "job",
+                2L, 3L, "192.168.1.1:9092", "topic");
+        ConnectContext connectContext = UtFrameUtils.createDefaultCtx();
+
+        String validStmt = "alter routine load for db.job1 " +
+                "FROM KAFKA (\"kafka_broker_list\" = \"192.168.1.2:9092,192.168.1.3:9092\")";
+        routineLoadJob.setOrigStmt(new OriginStatementInfo(validStmt, 0));
+
+        try {
+            AlterRoutineLoadStmt stmt = (AlterRoutineLoadStmt) UtFrameUtils.parseStmtWithNewParser(validStmt, connectContext);
+            routineLoadJob.replayModifyJob(stmt.getRoutineLoadDesc(), stmt.getAnalyzedJobProperties(),
+                    stmt.getDataSourceProperties());
+
+            // Verify broker list was updated successfully
+            Assertions.assertEquals("192.168.1.2:9092,192.168.1.3:9092", routineLoadJob.getBrokerList());
+        } catch (Exception e) {
+            Assertions.fail("Valid broker list should not throw exception");
+        }
+    }
+
+    @Test
+    public void testKafkaRoutineLoadJobInvalidBrokerList() throws Exception {
+        KafkaRoutineLoadJob routineLoadJob = new KafkaRoutineLoadJob(1L, "job",
+                2L, 3L, "192.168.1.1:9092", "topic");
+        ConnectContext connectContext = UtFrameUtils.createDefaultCtx();
+
+        String invalidStmt = "alter routine load for db.job1 " +
+                "FROM KAFKA (\"kafka_broker_list\" = \"invalid_broker_format\")";
+        routineLoadJob.setOrigStmt(new OriginStatementInfo(invalidStmt, 0));
+
+        try {
+            AlterRoutineLoadStmt stmt = (AlterRoutineLoadStmt) UtFrameUtils.parseStmtWithNewParser(invalidStmt, connectContext);
+            routineLoadJob.modifyJob(stmt.getRoutineLoadDesc(), stmt.getAnalyzedJobProperties(),
+                    stmt.getDataSourceProperties(), new OriginStatementInfo(invalidStmt, 0));
+            Assertions.fail("Invalid broker list should throw DdlException");
+        } catch (Exception e) {
+            // This should trigger the catch block on line 841-842
+            Assertions.assertTrue(e.getMessage().contains("does not match pattern"),
+                    "Should contain validation error message");
+        }
     }
 
     @Test
@@ -576,35 +697,35 @@ public class RoutineLoadJobTest {
         String originStmt = "CREATE ROUTINE LOAD job ON unknown " +
                 "PROPERTIES (\"desired_concurrent_number\"=\"1\") " +
                 "FROM KAFKA (\"kafka_topic\" = \"my_topic\")";
-        routineLoadJob.setOrigStmt(new OriginStatement(originStmt, 0));
+        routineLoadJob.setOrigStmt(new OriginStatementInfo(originStmt, 0));
 
         // alter columns terminator
-        RoutineLoadDesc loadDesc = CreateRoutineLoadStmt.getLoadDesc(new OriginStatement(
+        RoutineLoadDesc loadDesc = CreateRoutineLoadStmt.getLoadDesc(new OriginStatementInfo(
                 "ALTER ROUTINE LOAD FOR job " +
                         "COLUMNS TERMINATED BY ';'", 0), null);
         routineLoadJob.mergeLoadDescToOriginStatement(loadDesc);
-        Assert.assertEquals("CREATE ROUTINE LOAD job ON unknown " +
+        Assertions.assertEquals("CREATE ROUTINE LOAD job ON unknown " +
                 "COLUMNS TERMINATED BY ';' " +
                 "PROPERTIES (\"desired_concurrent_number\"=\"1\") " +
                 "FROM KAFKA (\"kafka_topic\" = \"my_topic\")", routineLoadJob.getOrigStmt().originStmt);
 
         // alter rows terminator
-        loadDesc = CreateRoutineLoadStmt.getLoadDesc(new OriginStatement(
+        loadDesc = CreateRoutineLoadStmt.getLoadDesc(new OriginStatementInfo(
                 "ALTER ROUTINE LOAD FOR job " +
                         "ROWS TERMINATED BY '\n'", 0), null);
         routineLoadJob.mergeLoadDescToOriginStatement(loadDesc);
-        Assert.assertEquals("CREATE ROUTINE LOAD job ON unknown " +
+        Assertions.assertEquals("CREATE ROUTINE LOAD job ON unknown " +
                 "COLUMNS TERMINATED BY ';', " +
                 "ROWS TERMINATED BY '\n' " +
                 "PROPERTIES (\"desired_concurrent_number\"=\"1\") " +
                 "FROM KAFKA (\"kafka_topic\" = \"my_topic\")", routineLoadJob.getOrigStmt().originStmt);
 
         // alter columns
-        loadDesc = CreateRoutineLoadStmt.getLoadDesc(new OriginStatement(
+        loadDesc = CreateRoutineLoadStmt.getLoadDesc(new OriginStatementInfo(
                 "ALTER ROUTINE LOAD FOR job " +
                         "COLUMNS(`a`, `b`, `c`=1)", 0), null);
         routineLoadJob.mergeLoadDescToOriginStatement(loadDesc);
-        Assert.assertEquals("CREATE ROUTINE LOAD job ON unknown " +
+        Assertions.assertEquals("CREATE ROUTINE LOAD job ON unknown " +
                 "COLUMNS TERMINATED BY ';', " +
                 "ROWS TERMINATED BY '\n', " +
                 "COLUMNS(`a`, `b`, `c` = 1) " +
@@ -612,11 +733,11 @@ public class RoutineLoadJobTest {
                 "FROM KAFKA (\"kafka_topic\" = \"my_topic\")", routineLoadJob.getOrigStmt().originStmt);
 
         // alter partition
-        loadDesc = CreateRoutineLoadStmt.getLoadDesc(new OriginStatement(
+        loadDesc = CreateRoutineLoadStmt.getLoadDesc(new OriginStatementInfo(
                 "ALTER ROUTINE LOAD FOR job " +
                         "TEMPORARY PARTITION(`p1`, `p2`)", 0), null);
         routineLoadJob.mergeLoadDescToOriginStatement(loadDesc);
-        Assert.assertEquals("CREATE ROUTINE LOAD job ON unknown " +
+        Assertions.assertEquals("CREATE ROUTINE LOAD job ON unknown " +
                 "COLUMNS TERMINATED BY ';', " +
                 "ROWS TERMINATED BY '\n', " +
                 "COLUMNS(`a`, `b`, `c` = 1), " +
@@ -625,11 +746,11 @@ public class RoutineLoadJobTest {
                 "FROM KAFKA (\"kafka_topic\" = \"my_topic\")", routineLoadJob.getOrigStmt().originStmt);
 
         // alter where
-        loadDesc = CreateRoutineLoadStmt.getLoadDesc(new OriginStatement(
+        loadDesc = CreateRoutineLoadStmt.getLoadDesc(new OriginStatementInfo(
                 "ALTER ROUTINE LOAD FOR job " +
                         "WHERE a = 1", 0), null);
         routineLoadJob.mergeLoadDescToOriginStatement(loadDesc);
-        Assert.assertEquals("CREATE ROUTINE LOAD job ON unknown " +
+        Assertions.assertEquals("CREATE ROUTINE LOAD job ON unknown " +
                 "COLUMNS TERMINATED BY ';', " +
                 "ROWS TERMINATED BY '\n', " +
                 "COLUMNS(`a`, `b`, `c` = 1), " +
@@ -639,11 +760,11 @@ public class RoutineLoadJobTest {
                 "FROM KAFKA (\"kafka_topic\" = \"my_topic\")", routineLoadJob.getOrigStmt().originStmt);
 
         // alter columns terminator again
-        loadDesc = CreateRoutineLoadStmt.getLoadDesc(new OriginStatement(
+        loadDesc = CreateRoutineLoadStmt.getLoadDesc(new OriginStatementInfo(
                 "ALTER ROUTINE LOAD FOR job " +
                         "COLUMNS TERMINATED BY '\t'", 0), null);
         routineLoadJob.mergeLoadDescToOriginStatement(loadDesc);
-        Assert.assertEquals("CREATE ROUTINE LOAD job ON unknown " +
+        Assertions.assertEquals("CREATE ROUTINE LOAD job ON unknown " +
                 "COLUMNS TERMINATED BY '\t', " +
                 "ROWS TERMINATED BY '\n', " +
                 "COLUMNS(`a`, `b`, `c` = 1), " +
@@ -653,11 +774,11 @@ public class RoutineLoadJobTest {
                 "FROM KAFKA (\"kafka_topic\" = \"my_topic\")", routineLoadJob.getOrigStmt().originStmt);
 
         // alter rows terminator again
-        loadDesc = CreateRoutineLoadStmt.getLoadDesc(new OriginStatement(
+        loadDesc = CreateRoutineLoadStmt.getLoadDesc(new OriginStatementInfo(
                 "ALTER ROUTINE LOAD FOR job " +
                         "ROWS TERMINATED BY 'a'", 0), null);
         routineLoadJob.mergeLoadDescToOriginStatement(loadDesc);
-        Assert.assertEquals("CREATE ROUTINE LOAD job ON unknown " +
+        Assertions.assertEquals("CREATE ROUTINE LOAD job ON unknown " +
                 "COLUMNS TERMINATED BY '\t', " +
                 "ROWS TERMINATED BY 'a', " +
                 "COLUMNS(`a`, `b`, `c` = 1), " +
@@ -667,11 +788,11 @@ public class RoutineLoadJobTest {
                 "FROM KAFKA (\"kafka_topic\" = \"my_topic\")", routineLoadJob.getOrigStmt().originStmt);
 
         // alter columns again
-        loadDesc = CreateRoutineLoadStmt.getLoadDesc(new OriginStatement(
+        loadDesc = CreateRoutineLoadStmt.getLoadDesc(new OriginStatementInfo(
                 "ALTER ROUTINE LOAD FOR job " +
                         "COLUMNS(`a`)", 0), null);
         routineLoadJob.mergeLoadDescToOriginStatement(loadDesc);
-        Assert.assertEquals("CREATE ROUTINE LOAD job ON unknown " +
+        Assertions.assertEquals("CREATE ROUTINE LOAD job ON unknown " +
                 "COLUMNS TERMINATED BY '\t', " +
                 "ROWS TERMINATED BY 'a', " +
                 "COLUMNS(`a`), " +
@@ -680,11 +801,11 @@ public class RoutineLoadJobTest {
                 "PROPERTIES (\"desired_concurrent_number\"=\"1\") " +
                 "FROM KAFKA (\"kafka_topic\" = \"my_topic\")", routineLoadJob.getOrigStmt().originStmt);
         // alter partition again
-        loadDesc = CreateRoutineLoadStmt.getLoadDesc(new OriginStatement(
+        loadDesc = CreateRoutineLoadStmt.getLoadDesc(new OriginStatementInfo(
                 "ALTER ROUTINE LOAD FOR job " +
                         " PARTITION(`p1`, `p2`)", 0), null);
         routineLoadJob.mergeLoadDescToOriginStatement(loadDesc);
-        Assert.assertEquals("CREATE ROUTINE LOAD job ON unknown " +
+        Assertions.assertEquals("CREATE ROUTINE LOAD job ON unknown " +
                 "COLUMNS TERMINATED BY '\t', " +
                 "ROWS TERMINATED BY 'a', " +
                 "COLUMNS(`a`), " +
@@ -694,11 +815,11 @@ public class RoutineLoadJobTest {
                 "FROM KAFKA (\"kafka_topic\" = \"my_topic\")", routineLoadJob.getOrigStmt().originStmt);
 
         // alter where again
-        loadDesc = CreateRoutineLoadStmt.getLoadDesc(new OriginStatement(
+        loadDesc = CreateRoutineLoadStmt.getLoadDesc(new OriginStatementInfo(
                 "ALTER ROUTINE LOAD FOR job " +
                         "WHERE a = 5", 0), null);
         routineLoadJob.mergeLoadDescToOriginStatement(loadDesc);
-        Assert.assertEquals("CREATE ROUTINE LOAD job ON unknown " +
+        Assertions.assertEquals("CREATE ROUTINE LOAD job ON unknown " +
                 "COLUMNS TERMINATED BY '\t', " +
                 "ROWS TERMINATED BY 'a', " +
                 "COLUMNS(`a`), " +
@@ -708,11 +829,11 @@ public class RoutineLoadJobTest {
                 "FROM KAFKA (\"kafka_topic\" = \"my_topic\")", routineLoadJob.getOrigStmt().originStmt);
 
         // alter where again
-        loadDesc = CreateRoutineLoadStmt.getLoadDesc(new OriginStatement(
+        loadDesc = CreateRoutineLoadStmt.getLoadDesc(new OriginStatementInfo(
                 "ALTER ROUTINE LOAD FOR job " +
                         "WHERE a = 5 and b like 'c1%' and c between 1 and 100 and substring(d,1,5) = 'cefd' ", 0), null);
         routineLoadJob.mergeLoadDescToOriginStatement(loadDesc);
-        Assert.assertEquals("CREATE ROUTINE LOAD job ON unknown " +
+        Assertions.assertEquals("CREATE ROUTINE LOAD job ON unknown " +
                 "COLUMNS TERMINATED BY '\t', " +
                 "ROWS TERMINATED BY 'a', " +
                 "COLUMNS(`a`), " +
@@ -723,5 +844,76 @@ public class RoutineLoadJobTest {
                 "AND (substring(`d`, 1, 5) = 'cefd') " +
                 "PROPERTIES (\"desired_concurrent_number\"=\"1\") " +
                 "FROM KAFKA (\"kafka_topic\" = \"my_topic\")", routineLoadJob.getOrigStmt().originStmt);
+    }
+
+    @Test
+    public void testPauseOnFatalParseError(@Injectable TransactionState transactionState,
+                                           @Injectable RoutineLoadTaskInfo routineLoadTaskInfo)
+            throws StarRocksException {
+        long txnId = 1L;
+        new Expectations() {
+            {
+                transactionState.getTransactionId();
+                minTimes = 0;
+                result = txnId;
+                transactionState.getTxnCommitAttachment();
+                minTimes = 0;
+                result = null;
+                routineLoadTaskInfo.getTxnId();
+                minTimes = 0;
+                result = txnId;
+                routineLoadTaskInfo.getId();
+                minTimes = 0;
+                result = UUIDUtil.genUUID();
+            }
+        };
+
+        new MockUp<KafkaRoutineLoadJob>() {
+            @Mock
+            void writeUnlock() {
+            }
+
+            @Mock
+            RoutineLoadTaskInfo unprotectRenewTask(long timeToExecuteMs, RoutineLoadTaskInfo routineLoadTaskInfo) {
+                return routineLoadTaskInfo;
+            }
+        };
+
+        // pauseOnFatalParseError = false
+        {
+            new MockUp<GlobalStateMgr>() {
+                @Mock
+                public RoutineLoadTaskScheduler getRoutineLoadTaskScheduler() {
+                    return new RoutineLoadTaskScheduler();
+                }
+            };
+
+            List<RoutineLoadTaskInfo> routineLoadTaskInfoList = Lists.newArrayList();
+            routineLoadTaskInfoList.add(routineLoadTaskInfo);
+            RoutineLoadJob routineLoadJob = new KafkaRoutineLoadJob();
+            Deencapsulation.setField(routineLoadJob, "routineLoadTaskInfoList", routineLoadTaskInfoList);
+            Deencapsulation.setField(routineLoadJob, "state", RoutineLoadJob.JobState.RUNNING);
+            routineLoadJob.afterAborted(transactionState, true,
+                    TxnStatusChangeReason.PARSE_ERROR.toString());
+            System.out.println(routineLoadJob.getPauseReason());
+            Assertions.assertEquals(RoutineLoadJob.JobState.RUNNING, routineLoadJob.getState());
+        }
+
+        // pauseOnFatalParseError = true
+        {
+            List<RoutineLoadTaskInfo> routineLoadTaskInfoList = Lists.newArrayList();
+            routineLoadTaskInfoList.add(routineLoadTaskInfo);
+            RoutineLoadJob routineLoadJob = new KafkaRoutineLoadJob();
+            Deencapsulation.setField(routineLoadJob, "routineLoadTaskInfoList", routineLoadTaskInfoList);
+            Deencapsulation.setField(routineLoadJob, "state", RoutineLoadJob.JobState.RUNNING);
+            ((Map<String, String>) Deencapsulation.getField(routineLoadJob, "jobProperties"))
+                    .put("pause_on_fatal_parse_error", "true");
+            routineLoadJob.afterAborted(transactionState, true,
+                    TxnStatusChangeReason.PARSE_ERROR.toString());
+            Assertions.assertEquals(RoutineLoadJob.JobState.PAUSED, routineLoadJob.getState());
+            String errorMsg =
+                    "ErrorReason{errCode = 5611, msg='parse error. Check the 'TrackingSQL' field for detailed information.'}";
+            Assertions.assertEquals(errorMsg, routineLoadJob.getPauseReason());
+        }
     }
 }
