@@ -21,7 +21,6 @@ import com.starrocks.catalog.LocalTablet;
 import com.starrocks.catalog.OlapTable;
 import com.starrocks.catalog.Replica;
 import com.starrocks.catalog.Table;
-import com.starrocks.common.Config;
 import com.starrocks.common.FeConstants;
 import com.starrocks.common.Reference;
 import com.starrocks.planner.OlapScanNode;
@@ -33,17 +32,15 @@ import com.starrocks.sql.optimizer.statistics.StatisticStorage;
 import com.starrocks.system.SystemInfoService;
 import com.starrocks.thrift.TExplainLevel;
 import com.starrocks.thrift.TQueryPlanInfo;
-import com.starrocks.utframe.StarRocksAssert;
 import com.starrocks.utframe.UtFrameUtils;
 import mockit.Expectations;
 import mockit.Mock;
 import mockit.MockUp;
 import mockit.Mocked;
-import org.junit.Assert;
-import org.junit.Before;
-import org.junit.BeforeClass;
-import org.junit.Ignore;
-import org.junit.Test;
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Disabled;
+import org.junit.jupiter.api.Test;
 
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -53,124 +50,19 @@ import java.util.stream.Collectors;
 import static java.lang.Double.NEGATIVE_INFINITY;
 import static java.lang.Double.POSITIVE_INFINITY;
 
-public class PlanFragmentWithCostTest extends PlanTestBase {
-    private static final int NUM_TABLE2_ROWS = 10000;
-    private static final int NUM_TABLE0_ROWS = 10000;
+public class PlanFragmentWithCostTest extends PlanWithCostTestBase {
 
-    @BeforeClass
-    public static void beforeClass() throws Exception {
-        PlanTestBase.beforeClass();
-
-        Config.alter_scheduler_interval_millisecond = 1;
-
-        GlobalStateMgr globalStateMgr = connectContext.getGlobalStateMgr();
-        OlapTable table2 = (OlapTable) globalStateMgr.getDb("test").getTable("test_all_type");
-        setTableStatistics(table2, NUM_TABLE2_ROWS);
-
-        OlapTable t0 = (OlapTable) globalStateMgr.getDb("test").getTable("t0");
-        setTableStatistics(t0, NUM_TABLE0_ROWS);
-
-        OlapTable colocateT0 = (OlapTable) globalStateMgr.getDb("test").getTable("colocate_t0");
-        setTableStatistics(colocateT0, NUM_TABLE0_ROWS);
-
-        OlapTable lineitem = (OlapTable) globalStateMgr.getDb("test").getTable("lineitem");
-        setTableStatistics(lineitem, NUM_TABLE0_ROWS * NUM_TABLE0_ROWS);
-
-        StarRocksAssert starRocksAssert = new StarRocksAssert(connectContext);
-        starRocksAssert.withTable("CREATE TABLE test_mv\n" +
-                "    (\n" +
-                "        event_day int,\n" +
-                "        siteid INT,\n" +
-                "        citycode SMALLINT,\n" +
-                "        username VARCHAR(32),\n" +
-                "        pv BIGINT SUM DEFAULT '0'\n" +
-                "    )\n" +
-                "    AGGREGATE KEY(event_day, siteid, citycode, username)\n" +
-                "    DISTRIBUTED BY HASH(siteid) BUCKETS 10\n" +
-                "    rollup (\n" +
-                "    r1(event_day,siteid),\n" +
-                "    r2(event_day,citycode),\n" +
-                "    r3(event_day),\n" +
-                "    r4(event_day,pv),\n" +
-                "    r5(event_day,siteid,pv)\n" +
-                "    )\n" +
-                "    PROPERTIES(\"replication_num\" = \"1\");");
-
-        starRocksAssert.withTable(" CREATE TABLE `duplicate_table_with_null` ( `k1`  date, `k2`  datetime, " +
-                "`k3`  char(20), `k4`  varchar(20), `k5`  boolean, `k6`  tinyint, " +
-                "`k7`  smallint, `k8`  int, `k9`  bigint, `k10` largeint, " +
-                "`k11` float, `k12` double, `k13` decimal(27,9) ) " +
-                "ENGINE=OLAP DUPLICATE KEY(`k1`, `k2`, `k3`, `k4`, `k5`) " +
-                "COMMENT \"OLAP\" DISTRIBUTED BY HASH(`k1`, `k2`, `k3`) " +
-                "BUCKETS 3 PROPERTIES ( \"replication_num\" = \"1\");");
-
-        starRocksAssert.withMaterializedView("CREATE MATERIALIZED VIEW bitmap_mv\n" +
-                "                             AS\n" +
-                "                             SELECT k1,k2,k3,k4, bitmap_union(to_bitmap(k7)), " +
-                "bitmap_union(to_bitmap(k8)) FROM duplicate_table_with_null group by k1,k2,k3,k4");
-
-        starRocksAssert.withTable("CREATE TABLE `test_dict` (\n" +
-                "  `name` varchar(65533) NOT NULL COMMENT \"\",\n" +
-                "  `dt` date NOT NULL  ,\n" +
-                "  `id` bigint(20) NOT NULL COMMENT \"\"\n" +
-                ") ENGINE=OLAP \n" +
-                "PRIMARY KEY(`name`,`dt`)\n" +
-                "COMMENT \"OLAP\"\n" +
-                "PARTITION BY RANGE(`dt`)\n" +
-                "(\n" +
-                "PARTITION p20221202 VALUES [('2022-12-02'), ('2022-12-03')),\n" +
-                "PARTITION p20221203 VALUES [('2022-12-03'), ('2022-12-04')),\n" +
-                "PARTITION p20221204 VALUES [('2022-12-04'), ('2022-12-05')),\n" +
-                "PARTITION p20221205 VALUES [('2022-12-05'), ('2022-12-06')),\n" +
-                "PARTITION p20221206 VALUES [('2022-12-06'), ('2022-12-07')),\n" +
-                "PARTITION p20221207 VALUES [('2022-12-07'), ('2022-12-08')),\n" +
-                "PARTITION p20221208 VALUES [('2022-12-08'), ('2022-12-09')),\n" +
-                "PARTITION p20221209 VALUES [('2022-12-09'), ('2022-12-10')),\n" +
-                "PARTITION p20221210 VALUES [('2022-12-10'), ('2022-12-11')),\n" +
-                "PARTITION p20221211 VALUES [('2022-12-11'), ('2022-12-12')),\n" +
-                "PARTITION p20221212 VALUES [('2022-12-12'), ('2022-12-13')),\n" +
-                "PARTITION p20221213 VALUES [('2022-12-13'), ('2022-12-14')))\n" +
-                "DISTRIBUTED BY HASH(`name`) BUCKETS 9 \n" +
-                "PROPERTIES (\n" +
-                "\"replication_num\" = \"1\",\n" +
-                "\"in_memory\" = \"false\",\n" +
-                "\"compression\" = \"LZ4\"\n" +
-                ");");
-
-        starRocksAssert.withTable("CREATE TABLE t1_single(\n" +
-                "    id bigint  ,\n" +
-                "    user_id  bigint  ,\n" +
-                "    recharge_money decimal(32,2) , \n" +
-                "    province varchar(255) not null ,\n" +
-                "    dt varchar\n" +
-                ") ENGINE=OLAP\n" +
-                "DUPLICATE KEY(id)\n" +
-                "PARTITION BY LIST (province) (\n" +
-                "   PARTITION p1 VALUES IN (\"beijing\",\"chongqing\"),\n" +
-                "   PARTITION p2 VALUES IN (\"shanghai\",\"tianjing\")\n" +
-                ") PROPERTIES (\"replication_num\" = \"1\")");
-        starRocksAssert.withTable("CREATE TABLE t1_multi_col(\n" +
-                "    id bigint  ,\n" +
-                "    user_id  bigint  ,\n" +
-                "    recharge_money decimal(32,2) , \n" +
-                "    province varchar(255) not null ,\n" +
-                "    dt varchar(255) not null\n" +
-                ") ENGINE=OLAP\n" +
-                "DUPLICATE KEY(id)\n" +
-                "PARTITION BY LIST (dt,province) (\n" +
-                "   PARTITION p1 VALUES IN ((\"2022-04-01\", \"beijing\"),(\"2022-04-01\", \"chongqing\")),\n" +
-                "   PARTITION p2 VALUES IN ((\"2022-04-02\", \"beijing\"))\n" +
-                ")\n" +
-                "DISTRIBUTED BY HASH(id) BUCKETS 1\n" +
-                "PROPERTIES(\n" +
-                "    \"replication_num\" = \"1\"\n" +
-                ");");
-        FeConstants.runningUnitTest = true;
-    }
-
-    @Before
+    @BeforeEach
     public void before() {
         connectContext.getSessionVariable().setNewPlanerAggStage(0);
+
+        GlobalStateMgr globalStateMgr = connectContext.getGlobalStateMgr();
+        OlapTable t0 = (OlapTable) globalStateMgr.getLocalMetastore().getDb("test").getTable("t0");
+        setTableStatistics(t0, NUM_TABLE0_ROWS);
+        OlapTable t1 = (OlapTable) globalStateMgr.getLocalMetastore().getDb("test").getTable("t1");
+        setTableStatistics(t1, 10000);
+        OlapTable t2 = (OlapTable) globalStateMgr.getLocalMetastore().getDb("test").getTable("t1");
+        setTableStatistics(t2, NUM_TABLE2_ROWS);
     }
 
     private static final String V1 = "v1";
@@ -181,9 +73,9 @@ public class PlanFragmentWithCostTest extends PlanTestBase {
     public void testCrossJoinBroadCast() throws Exception {
         // check cross join generate plan without exception
         GlobalStateMgr globalStateMgr = connectContext.getGlobalStateMgr();
-        OlapTable table2 = (OlapTable) globalStateMgr.getDb("test").getTable("test_all_type");
+        OlapTable table2 = (OlapTable) globalStateMgr.getLocalMetastore().getDb("test").getTable("test_all_type");
         setTableStatistics(table2, 20000000);
-        OlapTable t0 = (OlapTable) globalStateMgr.getDb("test").getTable("t0");
+        OlapTable t0 = (OlapTable) globalStateMgr.getLocalMetastore().getDb("test").getTable("t0");
         setTableStatistics(t0, 20000000);
 
         String sql = "select t1a,v1 from test_all_type, t0";
@@ -216,11 +108,14 @@ public class PlanFragmentWithCostTest extends PlanTestBase {
 
     // still choose two stage agg even it's a high cardinality scene to cover bad case when statistics is uncorrect
     @Test
-    public void testAggWithHighCardinality(@Mocked MockTpchStatisticStorage mockedStatisticStorage) throws Exception {
-        new Expectations() {
-            {
-                mockedStatisticStorage.getColumnStatistics((Table) any, Lists.newArrayList("v2"));
-                result = ImmutableList.of(new ColumnStatistic(0.0, 100, 0.0, 10, 7000));
+    public void testAggWithHighCardinality() throws Exception {
+        new MockUp<MockTpchStatisticStorage>() {
+            @Mock
+            public List<ColumnStatistic> getColumnStatistics(Table table, List<String> columns) {
+                if (columns.size() == 1 && columns.contains("v2")) {
+                    return ImmutableList.of(new ColumnStatistic(0.0, 100, 0.0, 10, 7000));
+                }
+                return List.of();
             }
         };
 
@@ -243,7 +138,7 @@ public class PlanFragmentWithCostTest extends PlanTestBase {
         };
         String sql = "select v1, sum(v2) from t0 group by v1 order by v1";
         String plan = getFragmentPlan(sql);
-        Assert.assertFalse(plan.contains("TOP-N"));
+        Assertions.assertFalse(plan.contains("TOP-N"));
         assertContains(plan, "  2:SORT\n"
                 + "  |  order by: <slot 1> 1: v1 ASC\n"
                 + "  |  offset: 0");
@@ -260,7 +155,7 @@ public class PlanFragmentWithCostTest extends PlanTestBase {
         };
         String sql = "select v1, sum(v2) from t0 group by v1 order by v1";
         String plan = getFragmentPlan(sql);
-        Assert.assertFalse(plan.contains("TOP-N"));
+        Assertions.assertFalse(plan.contains("TOP-N"));
         assertContains(plan, "  2:SORT\n"
                 + "  |  order by: <slot 1> 1: v1 ASC\n"
                 + "  |  offset: 0");
@@ -323,7 +218,7 @@ public class PlanFragmentWithCostTest extends PlanTestBase {
         assertContains(plan, "  STREAM DATA SINK\n"
                 + "    EXCHANGE ID: 05\n"
                 + "    UNPARTITIONED");
-        Assert.assertFalse(plan.contains("PLAN FRAGMENT 3"));
+        Assertions.assertFalse(plan.contains("PLAN FRAGMENT 3"));
 
     }
 
@@ -424,9 +319,9 @@ public class PlanFragmentWithCostTest extends PlanTestBase {
         UtFrameUtils.addMockBackend(10002);
         UtFrameUtils.addMockBackend(10003);
         GlobalStateMgr globalStateMgr = connectContext.getGlobalStateMgr();
-        OlapTable table1 = (OlapTable) globalStateMgr.getDb("test").getTable("t0");
+        OlapTable table1 = (OlapTable) globalStateMgr.getLocalMetastore().getDb("test").getTable("t0");
         setTableStatistics(table1, 10000);
-        OlapTable table2 = (OlapTable) globalStateMgr.getDb("test").getTable("test_all_type");
+        OlapTable table2 = (OlapTable) globalStateMgr.getLocalMetastore().getDb("test").getTable("test_all_type");
         setTableStatistics(table2, 5000);
         String sql = "SELECT v2,t1d from t0 join test_all_type on t0.v2 = test_all_type.t1d ;";
         String plan = getFragmentPlan(sql);
@@ -469,7 +364,7 @@ public class PlanFragmentWithCostTest extends PlanTestBase {
     @Test
     public void testBroadcastInnerJoinWithCommutativity() throws Exception {
         GlobalStateMgr globalStateMgr = connectContext.getGlobalStateMgr();
-        OlapTable table = (OlapTable) globalStateMgr.getDb("test").getTable("t0");
+        OlapTable table = (OlapTable) globalStateMgr.getLocalMetastore().getDb("test").getTable("t0");
         setTableStatistics(table, 1000);
         String sql = "SELECT * from t0 join test_all_type on t0.v1 = test_all_type.t1d ;";
         String plan = getFragmentPlan(sql);
@@ -503,7 +398,7 @@ public class PlanFragmentWithCostTest extends PlanTestBase {
     public void testDistinctExpr() throws Exception {
         String sql = "SELECT DISTINCT - - v1 DIV - 98 FROM t0;";
         String plan = getFragmentPlan(sql);
-        Assert.assertFalse(plan.contains("  2:AGGREGATE (update finalize)\n" +
+        Assertions.assertFalse(plan.contains("  2:AGGREGATE (update finalize)\n" +
                 "  |  group by: <slot 4>\n" +
                 "  |  \n" +
                 "  1:Project"));
@@ -576,7 +471,7 @@ public class PlanFragmentWithCostTest extends PlanTestBase {
     }
 
     @Test
-    @Ignore("disable replicate join temporarily")
+    @Disabled("disable replicate join temporarily")
     public void testReplicatedJoin() throws Exception {
         connectContext.getSessionVariable().setEnableReplicationJoin(true);
         String sql = "select s_name, s_address from supplier, nation where s_suppkey in " +
@@ -729,11 +624,84 @@ public class PlanFragmentWithCostTest extends PlanTestBase {
     }
 
     @Test
+    public void testPushDownIsoZonedDateTimePredicate() throws Exception {
+        String sql = "SELECT COUNT(1)\n" +
+                "  FROM test_dict\n" +
+                "  WHERE dt >= '2022-12-06T00:00:00Z'\n" +
+                "  AND dt < '2022-12-08T00:00:00Z'";
+        String plan = getFragmentPlan(sql);
+        assertContains(plan, "  0:OlapScanNode\n" +
+                "     TABLE: test_dict\n" +
+                "     PREAGGREGATION: ON\n" +
+                "     partitions=2/12\n" +
+                "     rollup: test_dict");
+    }
+
+    @Test
+    public void testPushDownIsoOffsetDateTimePredicate() throws Exception {
+        String sql = "SELECT COUNT(1)\n" +
+                "  FROM test_dict\n" +
+                "  WHERE dt >= '2022-12-06T00:00:00+01:00'\n" +
+                "  AND dt < '2022-12-08T00:00:00+01:00'";
+        String plan = getFragmentPlan(sql);
+        assertContains(plan, "  0:OlapScanNode\n" +
+                "     TABLE: test_dict\n" +
+                "     PREAGGREGATION: ON\n" +
+                "     partitions=2/12\n" +
+                "     rollup: test_dict");
+    }
+
+    @Test
+    public void testPushDownAggFunPredicate() throws Exception {
+        String sql = "select v1, min(v2) from t0 group by v1 having min(v2) < 2";
+        String plan = getFragmentPlan(sql);
+        assertContains(plan, "  0:OlapScanNode\n" +
+                "     TABLE: t0\n" +
+                "     PREAGGREGATION: ON\n" +
+                "     PREDICATES: 2: v2 < 2");
+
+        sql = "select v1, min(v2) from t0 group by v1 having min(v2) = 2";
+        plan = getFragmentPlan(sql);
+        assertContains(plan, "  0:OlapScanNode\n" +
+                "     TABLE: t0\n" +
+                "     PREAGGREGATION: ON\n" +
+                "     PREDICATES: 2: v2 <= 2");
+
+        sql = "select v1, max(v2) from t0 group by v1 having max(v2) >= 2";
+        plan = getFragmentPlan(sql);
+        assertContains(plan, "  0:OlapScanNode\n" +
+                "     TABLE: t0\n" +
+                "     PREAGGREGATION: ON\n" +
+                "     PREDICATES: 2: v2 >= 2");
+
+        sql = "select v1, max(v2) from t0 group by v1 having max(v2) = 2";
+        plan = getFragmentPlan(sql);
+        assertContains(plan, "  0:OlapScanNode\n" +
+                "     TABLE: t0\n" +
+                "     PREAGGREGATION: ON\n" +
+                "     PREDICATES: 2: v2 >= 2");
+
+        sql = "select * from (select v1, max(v2) as max_v2 from t0 group by v1) agg_t0 " +
+                "inner join t1 on agg_t0.v1 = t1.v4 and agg_t0.max_v2 > 2";
+        plan = getFragmentPlan(sql);
+        assertContains(plan, "     TABLE: t0\n" +
+                "     PREAGGREGATION: ON\n" +
+                "     PREDICATES: 2: v2 > 2");
+
+        sql = "select v1, max(v2) from t0 group by v1 having max(v2) < 2";
+        plan = getFragmentPlan(sql);
+        assertContains(plan, "  0:OlapScanNode\n" +
+                "     TABLE: t0\n" +
+                "     PREAGGREGATION: ON\n" +
+                "     partitions=1/1");
+    }
+
+    @Test
     public void testThriftWaitingNodeIds() throws Exception {
         GlobalStateMgr globalStateMgr = connectContext.getGlobalStateMgr();
-        OlapTable t0 = (OlapTable) globalStateMgr.getDb("test").getTable("t0");
+        OlapTable t0 = (OlapTable) globalStateMgr.getLocalMetastore().getDb("test").getTable("t0");
         setTableStatistics(t0, 10000000);
-        OlapTable t1 = (OlapTable) globalStateMgr.getDb("test").getTable("t1");
+        OlapTable t1 = (OlapTable) globalStateMgr.getLocalMetastore().getDb("test").getTable("t1");
         setTableStatistics(t1, 10000);
 
         String sql = "select * from t0 inner join t1 on t0.v1 = t1.v4 and t0.v2 = t1.v5 and t0.v1 = 1 and t1.v5 = 2";
@@ -746,26 +714,21 @@ public class PlanFragmentWithCostTest extends PlanTestBase {
     public void testIntersectReorder() throws Exception {
         // check cross join generate plan without exception
         GlobalStateMgr globalStateMgr = connectContext.getGlobalStateMgr();
-        OlapTable t0 = (OlapTable) globalStateMgr.getDb("test").getTable("t0");
+        OlapTable t0 = (OlapTable) globalStateMgr.getLocalMetastore().getDb("test").getTable("t0");
         setTableStatistics(t0, 1000);
-        OlapTable t1 = (OlapTable) globalStateMgr.getDb("test").getTable("t1");
+        OlapTable t1 = (OlapTable) globalStateMgr.getLocalMetastore().getDb("test").getTable("t1");
         setTableStatistics(t1, 100);
-        OlapTable t2 = (OlapTable) globalStateMgr.getDb("test").getTable("t2");
+        OlapTable t2 = (OlapTable) globalStateMgr.getLocalMetastore().getDb("test").getTable("t2");
         setTableStatistics(t2, 1);
 
         String sql = "select v1 from t0 intersect select v7 from t2 intersect select v4 from t1";
         String plan = getFragmentPlan(sql);
         assertContains(plan, "  0:INTERSECT\n" +
                 "  |  \n" +
-                "  |----4:EXCHANGE\n" +
+                "  |----3:EXCHANGE\n" +
                 "  |    \n" +
-                "  |----6:EXCHANGE\n" +
+                "  |----5:EXCHANGE\n" +
                 "  |    \n" +
-                "  2:EXCHANGE\n");
-        assertContains(plan, "  STREAM DATA SINK\n" +
-                "    EXCHANGE ID: 02\n" +
-                "    HASH_PARTITIONED: 4: v7\n" +
-                "\n" +
                 "  1:OlapScanNode\n" +
                 "     TABLE: t2");
         setTableStatistics(t0, 10000);
@@ -774,10 +737,10 @@ public class PlanFragmentWithCostTest extends PlanTestBase {
     @Test
     public void testNotPushDownRuntimeFilterToSortNode() throws Exception {
         GlobalStateMgr globalStateMgr = connectContext.getGlobalStateMgr();
-        OlapTable t0 = (OlapTable) globalStateMgr.getDb("test").getTable("t0");
+        OlapTable t0 = (OlapTable) globalStateMgr.getLocalMetastore().getDb("test").getTable("t0");
         setTableStatistics(t0, 10);
 
-        OlapTable t1 = (OlapTable) globalStateMgr.getDb("test").getTable("t1");
+        OlapTable t1 = (OlapTable) globalStateMgr.getLocalMetastore().getDb("test").getTable("t1");
         setTableStatistics(t1, 1000000000L);
 
         String sql = "select t0.v1 from (select v4 from t1 order by v4 limit 1000000000) as t1x " +
@@ -786,6 +749,8 @@ public class PlanFragmentWithCostTest extends PlanTestBase {
 
         assertContains(plan, "  1:TOP-N\n" +
                 "  |  order by: [1, BIGINT, true] ASC\n" +
+                "  |  build runtime filters:\n" +
+                "  |  - filter_id = 0, build_expr = (<slot 1> 1: v4), remote = false\n" +
                 "  |  offset: 0\n" +
                 "  |  limit: 1000000000\n" +
                 "  |  cardinality: 1000000000\n" +
@@ -809,15 +774,15 @@ public class PlanFragmentWithCostTest extends PlanTestBase {
         connectContext.getSessionVariable().setGlobalRuntimeFilterBuildMaxSize(0);
         connectContext.getSessionVariable().setGlobalRuntimeFilterProbeMinSize(0);
 
-        OlapTable t0 = (OlapTable) globalStateMgr.getDb("test").getTable("t0");
+        OlapTable t0 = (OlapTable) globalStateMgr.getLocalMetastore().getDb("test").getTable("t0");
         setTableStatistics(t0, 10000000L);
 
-        OlapTable t1 = (OlapTable) globalStateMgr.getDb("test").getTable("t1");
+        OlapTable t1 = (OlapTable) globalStateMgr.getLocalMetastore().getDb("test").getTable("t1");
         setTableStatistics(t1, 1000000000L);
 
         String sql = "select * from t0 join[shuffle] t1 on t0.v2 = t1.v5 and t0.v3 = t1.v6";
         String plan = getVerboseExplain(sql);
-        System.out.println(plan);
+        logSysInfo(plan);
 
         assertContains(plan, "  |  build runtime filters:\n" +
                 "  |  - filter_id = 0, build_expr = (5: v5), remote = true\n" +
@@ -835,19 +800,19 @@ public class PlanFragmentWithCostTest extends PlanTestBase {
         connectContext.getSessionVariable().setGlobalRuntimeFilterBuildMaxSize(0);
         connectContext.getSessionVariable().setGlobalRuntimeFilterProbeMinSize(0);
 
-        OlapTable t0 = (OlapTable) globalStateMgr.getDb("test").getTable("t0");
+        OlapTable t0 = (OlapTable) globalStateMgr.getLocalMetastore().getDb("test").getTable("t0");
         setTableStatistics(t0, 10000000L);
 
-        OlapTable t1 = (OlapTable) globalStateMgr.getDb("test").getTable("t1");
+        OlapTable t1 = (OlapTable) globalStateMgr.getLocalMetastore().getDb("test").getTable("t1");
         setTableStatistics(t1, 10000000L);
 
-        OlapTable t2 = (OlapTable) globalStateMgr.getDb("test").getTable("t2");
+        OlapTable t2 = (OlapTable) globalStateMgr.getLocalMetastore().getDb("test").getTable("t2");
         setTableStatistics(t2, 10000000L);
 
         String sql = "select * from (select t1.v5 as v5, t0.v3 as v3 from t0 join[shuffle] t1 on t0.v2 = " +
                 "t1.v5 and t0.v3 = t1.v6) tt join[shuffle] t2 on tt.v5 = t2.v8 and tt.v3 = t2.v7";
         String plan = getVerboseExplain(sql);
-        System.out.println(plan);
+        logSysInfo(plan);
 
         assertContains(plan, "  |  - filter_id = 0, build_expr = (5: v5), remote = true\n" +
                 "  |  - filter_id = 1, build_expr = (6: v6), remote = true");
@@ -878,16 +843,16 @@ public class PlanFragmentWithCostTest extends PlanTestBase {
     public void testPushDownRuntimeFilterAcrossSetOperationNode() throws Exception {
         GlobalStateMgr globalStateMgr = connectContext.getGlobalStateMgr();
 
-        OlapTable t0 = (OlapTable) globalStateMgr.getDb("test").getTable("t0");
+        OlapTable t0 = (OlapTable) globalStateMgr.getLocalMetastore().getDb("test").getTable("t0");
         setTableStatistics(t0, 1000);
-        OlapTable t1 = (OlapTable) globalStateMgr.getDb("test").getTable("t1");
+        OlapTable t1 = (OlapTable) globalStateMgr.getLocalMetastore().getDb("test").getTable("t1");
         setTableStatistics(t1, 100);
-        OlapTable t2 = (OlapTable) globalStateMgr.getDb("test").getTable("t2");
+        OlapTable t2 = (OlapTable) globalStateMgr.getLocalMetastore().getDb("test").getTable("t2");
         List<OlapTable> tables = new ArrayList<>(Arrays.asList(t0, t1, t2));
         List<String> tabletIdsStrList = new ArrayList<>();
         tables.forEach(olapTable -> tabletIdsStrList.add(Joiner.on(",")
-                .join(olapTable.getPartition(olapTable.getAllPartitionIds().get(0))
-                        .getBaseIndex().getTablets().stream().map(t -> t.getId()).collect(Collectors.toList()))));
+                .join(olapTable.getPartition(olapTable.getAllPartitionIds().get(0)).getDefaultPhysicalPartition()
+                        .getLatestBaseIndex().getTablets().stream().map(t -> t.getId()).collect(Collectors.toList()))));
 
         ArrayList<String> plans = new ArrayList<>();
         /// ===== union =====
@@ -934,7 +899,7 @@ public class PlanFragmentWithCostTest extends PlanTestBase {
             assertContains(unionPlan, "  4:OlapScanNode\n" +
                     "     table: t1, rollup: t1\n" +
                     "     preAggregation: on\n" +
-                    "     Predicates: 5: v4 + 2 IS NOT NULL\n" +
+                    "     Predicates: [5: v4, BIGINT, true] + 2 IS NOT NULL\n" +
                     "     partitionsRatio=1/1, tabletsRatio=3/3\n" +
                     "     tabletList=" + tabletIdsStrList.get(1) + "\n" +
                     "     actualRows=0, avgRowSize=4.0\n" +
@@ -944,7 +909,7 @@ public class PlanFragmentWithCostTest extends PlanTestBase {
             assertContains(unionPlan, "  1:OlapScanNode\n" +
                     "     table: t0, rollup: t0\n" +
                     "     preAggregation: on\n" +
-                    "     Predicates: 1: v1 + 1 IS NOT NULL\n" +
+                    "     Predicates: [1: v1, BIGINT, true] + 1 IS NOT NULL\n" +
                     "     partitionsRatio=1/1, tabletsRatio=3/3\n" +
                     "     tabletList=" + tabletIdsStrList.get(0) + "\n" +
                     "     actualRows=0, avgRowSize=4.0\n" +
@@ -961,9 +926,9 @@ public class PlanFragmentWithCostTest extends PlanTestBase {
                     "  |  child exprs:\n" +
                     "  |      [4: expr, BIGINT, true] | [2: v2, BIGINT, true] | [3: v3, BIGINT, true]\n" +
                     "  |      [8: expr, BIGINT, true] | [6: v5, BIGINT, true] | [7: v6, BIGINT, true]\n");
-            Assert.assertTrue(exceptPlan.contains("     probe runtime filters:\n" +
+            Assertions.assertTrue(exceptPlan.contains("     probe runtime filters:\n" +
                     "     - filter_id = 0, probe_expr = (5: v4 + 2)"));
-            Assert.assertTrue(exceptPlan.contains("     probe runtime filters:\n" +
+            Assertions.assertTrue(exceptPlan.contains("     probe runtime filters:\n" +
                     "     - filter_id = 0, probe_expr = (1: v1 + 1)"));
         }
         // === check intersect plan ====
@@ -975,9 +940,9 @@ public class PlanFragmentWithCostTest extends PlanTestBase {
                     "  |  child exprs:\n" +
                     "  |      [4: expr, BIGINT, true] | [2: v2, BIGINT, true] | [3: v3, BIGINT, true]\n" +
                     "  |      [8: expr, BIGINT, true] | [6: v5, BIGINT, true] | [7: v6, BIGINT, true]\n");
-            Assert.assertTrue(intersectPlan.contains("     probe runtime filters:\n" +
+            Assertions.assertTrue(intersectPlan.contains("     probe runtime filters:\n" +
                     "     - filter_id = 0, probe_expr = (5: v4 + 2)"));
-            Assert.assertTrue(intersectPlan.contains("     probe runtime filters:\n" +
+            Assertions.assertTrue(intersectPlan.contains("     probe runtime filters:\n" +
                     "     - filter_id = 0, probe_expr = (1: v1 + 1)"));
         }
     }
@@ -1004,13 +969,13 @@ public class PlanFragmentWithCostTest extends PlanTestBase {
         };
         String sql = "select * from lineitem limit 10";
         ExecPlan execPlan = getExecPlan(sql);
-        Assert.assertFalse(execPlan.getScanNodes().isEmpty());
-        Assert.assertEquals(1, ((OlapScanNode) execPlan.getScanNodes().get(0)).getScanTabletIds().size());
+        Assertions.assertFalse(execPlan.getScanNodes().isEmpty());
+        Assertions.assertEquals(1, ((OlapScanNode) execPlan.getScanNodes().get(0)).getScanTabletIds().size());
 
         sql = "select * from test_mv limit 10";
         execPlan = getExecPlan(sql);
-        Assert.assertFalse(execPlan.getScanNodes().isEmpty());
-        Assert.assertTrue(((OlapScanNode) execPlan.getScanNodes().get(0)).getScanTabletIds().size() > 1);
+        Assertions.assertFalse(execPlan.getScanNodes().isEmpty());
+        Assertions.assertTrue(((OlapScanNode) execPlan.getScanNodes().get(0)).getScanTabletIds().size() > 1);
     }
 
     @Test
@@ -1051,13 +1016,13 @@ public class PlanFragmentWithCostTest extends PlanTestBase {
         connectContext.getSessionVariable().setEnablePipelineEngine(true);
         connectContext.getSessionVariable().setCboCTERuseRatio(0);
 
-        OlapTable t1 = (OlapTable) globalStateMgr.getDb("test").getTable("t1");
-        OlapTable t2 = (OlapTable) globalStateMgr.getDb("test").getTable("t2");
+        OlapTable t1 = (OlapTable) globalStateMgr.getLocalMetastore().getDb("test").getTable("t1");
+        OlapTable t2 = (OlapTable) globalStateMgr.getLocalMetastore().getDb("test").getTable("t2");
         List<OlapTable> tables = new ArrayList<>(Arrays.asList(t1, t2));
         List<String> tabletIdsStrList = new ArrayList<>();
         tables.forEach(olapTable -> tabletIdsStrList.add(Joiner.on(",")
-                .join(olapTable.getPartition(olapTable.getAllPartitionIds().get(0))
-                        .getBaseIndex().getTablets().stream().map(t -> t.getId()).collect(Collectors.toList()))));
+                .join(olapTable.getPartition(olapTable.getAllPartitionIds().get(0)).getDefaultPhysicalPartition()
+                        .getLatestBaseIndex().getTablets().stream().map(t -> t.getId()).collect(Collectors.toList()))));
 
         setTableStatistics(t1, 400000);
         setTableStatistics(t2, 100);
@@ -1095,7 +1060,10 @@ public class PlanFragmentWithCostTest extends PlanTestBase {
     public void testLocalGroupingSet1() throws Exception {
         String sql = "select v1, v2, v3 from t0 group by grouping sets((v1, v2), (v1, v3), (v1))";
         String plan = getFragmentPlan(sql);
-        assertContains(plan, "  2:AGGREGATE (update serialize)\n" +
+        assertContains(plan, "  3:AGGREGATE (merge finalize)\n" +
+                "  |  group by: 1: v1, 2: v2, 3: v3, 4: GROUPING_ID\n" +
+                "  |  \n" +
+                "  2:AGGREGATE (update serialize)\n" +
                 "  |  STREAMING\n" +
                 "  |  group by: 1: v1, 2: v2, 3: v3, 4: GROUPING_ID\n" +
                 "  |  \n" +
@@ -1119,8 +1087,8 @@ public class PlanFragmentWithCostTest extends PlanTestBase {
     @Test
     public void testOverflowFilterOnColocateJoin() throws Exception {
         GlobalStateMgr globalStateMgr = connectContext.getGlobalStateMgr();
-        OlapTable t1 = (OlapTable) globalStateMgr.getDb("test").getTable("colocate1");
-        OlapTable t2 = (OlapTable) globalStateMgr.getDb("test").getTable("colocate2");
+        OlapTable t1 = (OlapTable) globalStateMgr.getLocalMetastore().getDb("test").getTable("colocate1");
+        OlapTable t2 = (OlapTable) globalStateMgr.getLocalMetastore().getDb("test").getTable("colocate2");
 
         StatisticStorage ss = globalStateMgr.getCurrentState().getStatisticStorage();
         new Expectations(ss) {
@@ -1150,8 +1118,8 @@ public class PlanFragmentWithCostTest extends PlanTestBase {
     @Test
     public void testPruneShuffleColumns() throws Exception {
         GlobalStateMgr globalStateMgr = connectContext.getGlobalStateMgr();
-        OlapTable t0 = (OlapTable) globalStateMgr.getDb("test").getTable("t0");
-        OlapTable t1 = (OlapTable) globalStateMgr.getDb("test").getTable("t1");
+        OlapTable t0 = (OlapTable) globalStateMgr.getLocalMetastore().getDb("test").getTable("t0");
+        OlapTable t1 = (OlapTable) globalStateMgr.getLocalMetastore().getDb("test").getTable("t1");
 
         StatisticStorage ss = globalStateMgr.getCurrentState().getStatisticStorage();
         new Expectations(ss) {
@@ -1227,7 +1195,7 @@ public class PlanFragmentWithCostTest extends PlanTestBase {
     @Test
     public void testToDateToDays() throws Exception {
         GlobalStateMgr globalStateMgr = connectContext.getGlobalStateMgr();
-        OlapTable t0 = (OlapTable) globalStateMgr.getDb("test").getTable("test_all_type");
+        OlapTable t0 = (OlapTable) globalStateMgr.getLocalMetastore().getDb("test").getTable("test_all_type");
         StatisticStorage ss = GlobalStateMgr.getCurrentState().getStatisticStorage();
         new Expectations(ss) {
             {
@@ -1249,8 +1217,8 @@ public class PlanFragmentWithCostTest extends PlanTestBase {
     @Test
     public void testMultiJoinColumnPruneShuffleColumnsAndGRF() throws Exception {
         GlobalStateMgr globalStateMgr = connectContext.getGlobalStateMgr();
-        OlapTable t0 = (OlapTable) globalStateMgr.getDb("test").getTable("t0");
-        OlapTable t1 = (OlapTable) globalStateMgr.getDb("test").getTable("t1");
+        OlapTable t0 = (OlapTable) globalStateMgr.getLocalMetastore().getDb("test").getTable("t0");
+        OlapTable t1 = (OlapTable) globalStateMgr.getLocalMetastore().getDb("test").getTable("t1");
 
         StatisticStorage ss = GlobalStateMgr.getCurrentState().getStatisticStorage();
         new Expectations(ss) {
@@ -1280,7 +1248,7 @@ public class PlanFragmentWithCostTest extends PlanTestBase {
 
         String sql = "select * from t0 join[shuffle] t1 on t0.v2 = t1.v5 and t0.v3 = t1.v6";
         String plan = getVerboseExplain(sql);
-        System.out.println(plan);
+        logSysInfo(plan);
 
         assertContains(plan, "  Input Partition: RANDOM\n" +
                 "  OutPut Partition: HASH_PARTITIONED: 2: v2\n" +
@@ -1521,7 +1489,9 @@ public class PlanFragmentWithCostTest extends PlanTestBase {
         };
 
         boolean prevEnableLocalShuffleAgg = connectContext.getSessionVariable().isEnableLocalShuffleAgg();
+        boolean prevEliminateAgg = connectContext.getSessionVariable().isEnableEliminateAgg();
         connectContext.getSessionVariable().setEnableLocalShuffleAgg(true);
+        connectContext.getSessionVariable().setEnableEliminateAgg(false);
 
         String sql;
         String plan;
@@ -1535,10 +1505,10 @@ public class PlanFragmentWithCostTest extends PlanTestBase {
             sql = "select sum(v2) from colocate_t0 group by v2";
             execPlan = getExecPlan(sql);
             olapScanNode = (OlapScanNode) execPlan.getScanNodes().get(0);
-            Assert.assertEquals(0, olapScanNode.getBucketExprs().size());
-            Assert.assertFalse(containAnyColocateNode(execPlan.getFragments().get(1).getPlanRoot()));
+            Assertions.assertEquals(0, olapScanNode.getBucketExprs().size());
+            Assertions.assertFalse(containAnyColocateNode(execPlan.getFragments().get(1).getPlanRoot()));
             plan = execPlan.getExplainString(TExplainLevel.NORMAL);
-            assertContains(plan, "  2:AGGREGATE (update finalize)\n" +
+            assertContains(plan, "  1:AGGREGATE (update finalize)\n" +
                     "  |  output: sum(2: v2)\n" +
                     "  |  group by: 2: v2\n" +
                     "  |  withLocalShuffle: true\n" +
@@ -1552,16 +1522,16 @@ public class PlanFragmentWithCostTest extends PlanTestBase {
                     "select v2, sum(cnt) from w1 group by v2, cnt";
             execPlan = getExecPlan(sql);
             olapScanNode = (OlapScanNode) execPlan.getScanNodes().get(0);
-            Assert.assertEquals(0, olapScanNode.getBucketExprs().size());
-            Assert.assertFalse(containAnyColocateNode(execPlan.getFragments().get(1).getPlanRoot()));
-            Assert.assertFalse(execPlan.getFragments().get(1).isAssignScanRangesPerDriverSeq());
+            Assertions.assertEquals(0, olapScanNode.getBucketExprs().size());
+            Assertions.assertFalse(containAnyColocateNode(execPlan.getFragments().get(1).getPlanRoot()));
+            Assertions.assertFalse(execPlan.getFragments().get(1).isAssignScanRangesPerDriverSeq());
             plan = execPlan.getExplainString(TExplainLevel.NORMAL);
-            assertContains(plan, "  3:AGGREGATE (update finalize)\n" +
+            assertContains(plan, "  2:AGGREGATE (update finalize)\n" +
                     "  |  output: sum(4: count)\n" +
                     "  |  group by: 2: v2, 4: count\n" +
                     "  |  withLocalShuffle: true\n" +
                     "  |  \n" +
-                    "  2:AGGREGATE (update finalize)\n" +
+                    "  1:AGGREGATE (update finalize)\n" +
                     "  |  output: count(2: v2)\n" +
                     "  |  group by: 2: v2\n" +
                     "  |  withLocalShuffle: true\n" +
@@ -1575,9 +1545,9 @@ public class PlanFragmentWithCostTest extends PlanTestBase {
                     "select sum(cnt) from w1 group by cnt";
             execPlan = getExecPlan(sql);
             olapScanNode = (OlapScanNode) execPlan.getScanNodes().get(0);
-            Assert.assertEquals(0, olapScanNode.getBucketExprs().size());
-            Assert.assertTrue(containAnyColocateNode(execPlan.getFragments().get(1).getPlanRoot()));
-            Assert.assertTrue(execPlan.getFragments().get(2).isAssignScanRangesPerDriverSeq());
+            Assertions.assertEquals(0, olapScanNode.getBucketExprs().size());
+            Assertions.assertTrue(containAnyColocateNode(execPlan.getFragments().get(1).getPlanRoot()));
+            Assertions.assertTrue(execPlan.getFragments().get(2).isAssignScanRangesPerDriverSeq());
             plan = execPlan.getExplainString(TExplainLevel.NORMAL);
             assertContains(plan, "  3:AGGREGATE (update serialize)\n" +
                     "  |  STREAMING\n" +
@@ -1599,8 +1569,8 @@ public class PlanFragmentWithCostTest extends PlanTestBase {
             sql = "select sum(v1) from colocate_t0 group by v1";
             execPlan = getExecPlan(sql);
             olapScanNode = (OlapScanNode) execPlan.getScanNodes().get(0);
-            Assert.assertEquals(0, olapScanNode.getBucketExprs().size());
-            Assert.assertTrue(containAnyColocateNode(execPlan.getFragments().get(1).getPlanRoot()));
+            Assertions.assertEquals(0, olapScanNode.getBucketExprs().size());
+            Assertions.assertTrue(containAnyColocateNode(execPlan.getFragments().get(1).getPlanRoot()));
             plan = execPlan.getExplainString(TExplainLevel.NORMAL);
             assertContains(plan, "1:AGGREGATE (update finalize)\n" +
                     "  |  output: sum(1: v1)\n" +
@@ -1614,7 +1584,7 @@ public class PlanFragmentWithCostTest extends PlanTestBase {
             sql = "select sum(v2) from t0";
             execPlan = getExecPlan(sql);
             olapScanNode = (OlapScanNode) execPlan.getScanNodes().get(0);
-            Assert.assertEquals(0, olapScanNode.getBucketExprs().size());
+            Assertions.assertEquals(0, olapScanNode.getBucketExprs().size());
             plan = execPlan.getExplainString(TExplainLevel.NORMAL);
             assertContains(plan, "1:AGGREGATE (update serialize)\n" +
                     "  |  output: sum(2: v2)\n" +
@@ -1633,7 +1603,7 @@ public class PlanFragmentWithCostTest extends PlanTestBase {
             sql = "select sum(v2) from t0 group by v2";
             execPlan = getExecPlan(sql);
             olapScanNode = (OlapScanNode) execPlan.getScanNodes().get(0);
-            Assert.assertEquals(0, olapScanNode.getBucketExprs().size());
+            Assertions.assertEquals(0, olapScanNode.getBucketExprs().size());
             plan = execPlan.getExplainString(TExplainLevel.NORMAL);
             assertContains(plan, " 3:AGGREGATE (merge finalize)\n" +
                     "  |  output: sum(4: sum)\n" +
@@ -1647,19 +1617,19 @@ public class PlanFragmentWithCostTest extends PlanTestBase {
             sql = "select sum(v2) from t0 group by v2";
             execPlan = getExecPlan(sql);
             olapScanNode = (OlapScanNode) execPlan.getScanNodes().get(0);
-            Assert.assertEquals(0, olapScanNode.getBucketExprs().size());
+            Assertions.assertEquals(0, olapScanNode.getBucketExprs().size());
             plan = execPlan.getExplainString(TExplainLevel.NORMAL);
-            assertContains(plan, "1:AGGREGATE (update serialize)\n" +
+            assertContains(plan, "  2:AGGREGATE (merge finalize)\n" +
+                    "  |  output: sum(4: sum)\n" +
+                    "  |  group by: 2: v2\n" +
+                    "  |  withLocalShuffle: true\n" +
+                    "  |  \n" +
+                    "  1:AGGREGATE (update serialize)\n" +
                     "  |  STREAMING\n" +
                     "  |  output: sum(2: v2)\n" +
                     "  |  group by: 2: v2\n" +
                     "  |  \n" +
                     "  0:OlapScanNode");
-            assertContains(plan, "  3:AGGREGATE (merge finalize)\n" +
-                    "  |  output: sum(4: sum)\n" +
-                    "  |  group by: 2: v2\n" +
-                    "  |  \n" +
-                    "  2:EXCHANGE");
 
             // case 8: insert into cannot use one-phase local aggregation with local shuffle.
             isSingleBackendAndComputeNode.setRef(true);
@@ -1667,8 +1637,8 @@ public class PlanFragmentWithCostTest extends PlanTestBase {
             sql = "insert into colocate_t0 select v2, v2, sum(v2) from t0 group by v2";
             execPlan = getExecPlan(sql);
             olapScanNode = (OlapScanNode) execPlan.getScanNodes().get(0);
-            Assert.assertEquals(0, olapScanNode.getBucketExprs().size());
-            Assert.assertFalse(containAnyColocateNode(execPlan.getFragments().get(1).getPlanRoot()));
+            Assertions.assertEquals(0, olapScanNode.getBucketExprs().size());
+            Assertions.assertFalse(containAnyColocateNode(execPlan.getFragments().get(1).getPlanRoot()));
             plan = execPlan.getExplainString(TExplainLevel.NORMAL);
             assertContains(plan, "3:AGGREGATE (merge finalize)\n" +
                     "  |  output: sum(4: sum)\n" +
@@ -1684,7 +1654,29 @@ public class PlanFragmentWithCostTest extends PlanTestBase {
                     "(select v2, sum(v2) from t0 group by v2) t2 on t1.v2=t2.v2";
             execPlan = getExecPlan(sql);
             plan = execPlan.getExplainString(TExplainLevel.NORMAL);
-            assertContains(plan, "8:HASH JOIN\n" +
+            assertContains(plan, "  6:HASH JOIN\n" +
+                    "  |  join op: INNER JOIN (BUCKET_SHUFFLE(S))\n" +
+                    "  |  colocate: false, reason: \n" +
+                    "  |  equal join conjunct: 2: v2 = 6: v2\n" +
+                    "  |  \n" +
+                    "  |----5:AGGREGATE (update finalize)\n" +
+                    "  |    |  group by: 6: v2\n" +
+                    "  |    |  \n" +
+                    "  |    4:EXCHANGE\n" +
+                    "  |    \n" +
+                    "  2:AGGREGATE (update finalize)\n" +
+                    "  |  group by: 2: v2\n" +
+                    "  |  \n" +
+                    "  1:EXCHANGE");
+
+            isSingleBackendAndComputeNode.setRef(true);
+            cardinality.setRef(avgLowCardinality);
+            sql = "select count(1) from " +
+                    "(select v2, sum(v2) from t0 group by v2) t1 join " +
+                    "(select v2, sum(v2) from t0 group by v2) t2 on t1.v2=t2.v2";
+            execPlan = getExecPlan(sql);
+            plan = execPlan.getExplainString(TExplainLevel.NORMAL);
+            assertContains(plan, "  8:HASH JOIN\n" +
                     "  |  join op: INNER JOIN (BUCKET_SHUFFLE(S))\n" +
                     "  |  colocate: false, reason: \n" +
                     "  |  equal join conjunct: 2: v2 = 6: v2\n" +
@@ -1698,8 +1690,22 @@ public class PlanFragmentWithCostTest extends PlanTestBase {
                     "  |  group by: 2: v2\n" +
                     "  |  \n" +
                     "  2:EXCHANGE");
+
+            // case 10: SELECT DISTINCT should preserve withLocalShuffle in single-phase agg
+            isSingleBackendAndComputeNode.setRef(true);
+            cardinality.setRef(avgHighCardinality);
+            sql = "SELECT DISTINCT v2 FROM colocate_t0";
+            execPlan = getExecPlan(sql);
+            plan = execPlan.getExplainString(TExplainLevel.NORMAL);
+            
+            assertContains(plan, "1:AGGREGATE (update finalize)\n" +
+                    "  |  group by: 2: v2\n" +
+                    "  |  withLocalShuffle: true\n" +
+                    "  |  \n" +
+                    "  0:OlapScanNode");
         } finally {
             connectContext.getSessionVariable().setEnableLocalShuffleAgg(prevEnableLocalShuffleAgg);
+            connectContext.getSessionVariable().setEnableEliminateAgg(prevEliminateAgg);
         }
     }
 
@@ -1844,7 +1850,7 @@ public class PlanFragmentWithCostTest extends PlanTestBase {
                 "    AND v1 = 99))\n" +
                 "   AND v1 = 100";
         String plan = getFragmentPlan(sql);
-        System.out.println(plan);
+        logSysInfo(plan);
     }
 
     @Test
@@ -1970,10 +1976,10 @@ public class PlanFragmentWithCostTest extends PlanTestBase {
                 "     PREAGGREGATION: ON");
     }
 
-    @Ignore
+    @Disabled
     public void testDeepTreePredicate() throws Exception {
         GlobalStateMgr globalStateMgr = connectContext.getGlobalStateMgr();
-        OlapTable table2 = (OlapTable) globalStateMgr.getDb("test").getTable("test_dict");
+        OlapTable table2 = (OlapTable) globalStateMgr.getLocalMetastore().getDb("test").getTable("test_dict");
         setTableStatistics(table2, 20000000);
 
         String sql = getSQLFile("optimized-plan/large_predicate");
@@ -1987,12 +1993,12 @@ public class PlanFragmentWithCostTest extends PlanTestBase {
     @Test
     public void testJoinUnreorder() throws Exception {
         GlobalStateMgr globalStateMgr = connectContext.getGlobalStateMgr();
-        OlapTable t0 = (OlapTable) globalStateMgr.getDb("test").getTable("t0");
+        OlapTable t0 = (OlapTable) globalStateMgr.getLocalMetastore().getDb("test").getTable("t0");
         setTableStatistics(t0, 10000000);
-        OlapTable t1 = (OlapTable) globalStateMgr.getDb("test").getTable("t1");
+        OlapTable t1 = (OlapTable) globalStateMgr.getLocalMetastore().getDb("test").getTable("t1");
         setTableStatistics(t1, 10000);
 
-        OlapTable t2 = (OlapTable) globalStateMgr.getDb("test").getTable("t2");
+        OlapTable t2 = (OlapTable) globalStateMgr.getLocalMetastore().getDb("test").getTable("t2");
         setTableStatistics(t1, 10);
 
         String sql = "Select * " +
@@ -2034,7 +2040,7 @@ public class PlanFragmentWithCostTest extends PlanTestBase {
     @Test
     public void testPruneLimit() throws Exception {
         GlobalStateMgr globalStateMgr = connectContext.getGlobalStateMgr();
-        OlapTable table2 = (OlapTable) globalStateMgr.getDb("test").getTable("lineitem_partition");
+        OlapTable table2 = (OlapTable) globalStateMgr.getLocalMetastore().getDb("test").getTable("lineitem_partition");
         setTableStatistics(table2, 10);
 
         new MockUp<LocalTablet>() {
@@ -2054,7 +2060,7 @@ public class PlanFragmentWithCostTest extends PlanTestBase {
     @Test
     public void testPruneInvalidPredicate() throws Exception {
         GlobalStateMgr globalStateMgr = connectContext.getGlobalStateMgr();
-        OlapTable table2 = (OlapTable) globalStateMgr.getDb("test").getTable("lineitem_partition");
+        OlapTable table2 = (OlapTable) globalStateMgr.getLocalMetastore().getDb("test").getTable("lineitem_partition");
         setTableStatistics(table2, 10);
 
         new MockUp<LocalTablet>() {
@@ -2304,35 +2310,31 @@ public class PlanFragmentWithCostTest extends PlanTestBase {
                     "from t0 join [broadcast] test_all_type " +
                     "join [shuffle] (select 1 as v1_c1 where abs(1) = 2) v1 on t1a=v1 and t1a=v1_c1";
             String plan = getVerboseExplain(sql);
-            assertContains(plan, "  11:HASH JOIN\n" +
-                    "  |  join op: INNER JOIN (PARTITIONED)\n" +
-                    "  |  equal join conjunct: [4: t1a, VARCHAR, true] = [16: cast, VARCHAR, false]\n" +
-                    "  |  build runtime filters:\n" +
-                    "  |  - filter_id = 1, build_expr = (16: cast), remote = true\n" +
-                    "  |  output columns: 1, 4\n" +
-                    "  |  cardinality: 9000\n" +
+            assertContains(plan, "10:NESTLOOP JOIN\n" +
+                    "  |  join op: CROSS JOIN\n" +
+                    "  |  cardinality: 10000\n" +
                     "  |  \n" +
-                    "  |----10:EXCHANGE\n" +
-                    "  |       distribution type: SHUFFLE\n" +
-                    "  |       partition exprs: [16: cast, VARCHAR, false]\n" +
+                    "  |----9:EXCHANGE\n" +
+                    "  |       distribution type: BROADCAST\n" +
                     "  |       cardinality: 1\n" +
                     "  |    \n" +
-                    "  6:EXCHANGE\n" +
-                    "     distribution type: SHUFFLE\n" +
-                    "     partition exprs: [4: t1a, VARCHAR, true]\n" +
-                    "     cardinality: 9000");
-            System.out.println(plan);
+                    "  5:Project\n" +
+                    "  |  output columns:\n" +
+                    "  |  1 <-> [1: v1, BIGINT, true]\n" +
+                    "  |  4 <-> [4: t1a, VARCHAR, true]\n" +
+                    "  |  cardinality: 10000");
+            logSysInfo(plan);
             assertContains(plan, "PLAN COST\n" +
-                    "  CPU: 1881002.0\n" +
-                    "  Memory: 288001.0");
+                    "  CPU: 4.80001312001E11\n" +
+                    "  Memory: 320201.0");
 
             assertContains(getCostExplain(sql), "PLAN COST\n" +
-                    "  CPU: 1881002.0\n" +
-                    "  Memory: 288001.0");
+                    "  CPU: 4.80001312001E11\n" +
+                    "  Memory: 320201.0");
 
             AuditEvent event = connectContext.getAuditEventBuilder().build();
-            Assert.assertTrue("planMemCosts should be > 1, but: " + event.planMemCosts, event.planMemCosts > 1);
-            Assert.assertTrue("planCpuCosts should be > 1, but: " + event.planCpuCosts, event.planCpuCosts > 1);
+            Assertions.assertTrue(event.planMemCosts > 1, "planMemCosts should be > 1, but: " + event.planMemCosts);
+            Assertions.assertTrue(event.planCpuCosts > 1, "planCpuCosts should be > 1, but: " + event.planCpuCosts);
         } finally {
             FeConstants.showFragmentCost = prevShowFragmentCost;
         }
@@ -2393,8 +2395,8 @@ public class PlanFragmentWithCostTest extends PlanTestBase {
         ExecPlan execPlan = getExecPlan(sql);
         TQueryPlanInfo tQueryPlanInfo = new TQueryPlanInfo();
         tQueryPlanInfo.output_names = execPlan.getColNames();
-        Assert.assertEquals(4, tQueryPlanInfo.output_names.size());
-        Assert.assertEquals("alias_1", tQueryPlanInfo.output_names.get(0));
+        Assertions.assertEquals(4, tQueryPlanInfo.output_names.size());
+        Assertions.assertEquals("alias_1", tQueryPlanInfo.output_names.get(0));
     }
 
     @Test
@@ -2407,5 +2409,60 @@ public class PlanFragmentWithCostTest extends PlanTestBase {
         plan = getCostExplain(sql);
         assertContains(plan, "province-->[-Infinity, Infinity, 0.0, 1.0, 2.0]");
         assertContains(plan, "dt-->[-Infinity, Infinity, 0.0, 1.0, 2.0]");
+    }
+
+    @Test
+    public void testBroadcastJoin() throws Exception {
+        GlobalStateMgr globalStateMgr = connectContext.getGlobalStateMgr();
+        OlapTable t0 = (OlapTable) globalStateMgr.getLocalMetastore().getDb("test").getTable("t0");
+        setTableStatistics(t0, 10000000);
+        OlapTable t1 = (OlapTable) globalStateMgr.getLocalMetastore().getDb("test").getTable("t1");
+        setTableStatistics(t1, 10000);
+
+        String sql = "select * " +
+                " from t0 join t1 on t0.v3 = t1.v6 " +
+                "         join t2 on t0.v2 = t2.v8 and t1.v5 = t2.v7";
+        {
+            String plan = getFragmentPlan(sql);
+            assertContains(plan, "  4:HASH JOIN\n" +
+                    "  |  join op: INNER JOIN (BROADCAST)\n" +
+                    "  |  colocate: false, reason: \n" +
+                    "  |  equal join conjunct: 5: v5 = 7: v7");
+            assertContains(plan, "6:HASH JOIN\n" +
+                    "  |  join op: INNER JOIN (BROADCAST)\n" +
+                    "  |  colocate: false, reason: \n" +
+                    "  |  equal join conjunct: 2: v2 = 8: v8\n" +
+                    "  |  equal join conjunct: 3: v3 = 6: v6");
+        }
+
+        long originLimit = connectContext.getSessionVariable().getBroadcastRowCountLimit();
+        {
+            // broadcast join should be disabled
+            connectContext.getSessionVariable().setBroadcastRowCountLimit(0);
+            String plan = getFragmentPlan(sql);
+            assertContains(plan, "  8:HASH JOIN\n" +
+                    "  |  join op: INNER JOIN (PARTITIONED)\n" +
+                    "  |  colocate: false, reason: \n" +
+                    "  |  equal join conjunct: 2: v2 = 8: v8\n" +
+                    "  |  equal join conjunct: 3: v3 = 6: v6\n" +
+                    "  |  \n" +
+                    "  |----7:EXCHANGE\n" +
+                    "  |    \n" +
+                    "  1:EXCHANGE");
+            assertContains(plan, "  6:HASH JOIN\n" +
+                    "  |  join op: INNER JOIN (PARTITIONED)\n" +
+                    "  |  colocate: false, reason: \n" +
+                    "  |  equal join conjunct: 5: v5 = 7: v7\n" +
+                    "  |  \n" +
+                    "  |----5:EXCHANGE\n" +
+                    "  |    \n" +
+                    "  3:EXCHANGE");
+            connectContext.getSessionVariable().setBroadcastRowCountLimit(originLimit);
+        }
+    }
+
+    @Test
+    public void testCostBasedMultiStageAgg() {
+        runFileUnitTest("optimized-plan/cost_based_multi_stage_agg");
     }
 }
